add multiple language

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -63,5 +63,44 @@
     "take_photo": "Take Photo",
     "analysis_results": "Analysis Results",
     "total_nutrients": "Total Nutrients",
-    "no_food_items_analyzed_yet": "No food items analyzed yet"
+    "no_food_items_analyzed_yet": "No food items analyzed yet",
+    "daily_nutrition": "Daily Nutrition",
+    "today_intake": "Today Intake",
+    "food_items_history": "Food Items History",
+    "this_section_show_all_food_item_you_have_comsume": "This section shows all the food items you have consumed today, along with their caloric values and timestamps.",
+    "got_it": "Got it",
+    "detailed_nutrients": "Detailed Nutrients",
+    "chat_with_AI": "Chat with AI",
+    "welcome_message": "👋 Hello! I'm your nutrition and health assistant. How can I help you today? 🍎",
+    "ask_AI": "Ask AI",
+    "what_would_you_like_to_know_about": "👋 Hello, what would you like to know about",
+    "suggestions_1": "🍽️ Is this meal balanced?",
+    "suggestions_2": "🍊 Is this meal rich in vitamins?",
+    "suggestions_3": "🏋️‍♂️ Is this meal good for weight loss?",
+    "suggestions_4": "💪 How does this meal support muscle growth?",
+    "suggestions_5": "🌟 What are the health benefits of this meal?",
+    "no_results_found": "No Results Found!",
+    "add_food_item": "Add Food Item",
+    "suggession_widget_1": "What nutrients does this food contain?",
+    "suggession_widget_2": "Is this food healthy for me?",
+    "suggession_widget_3": "How many calories in this serving?",
+    "suggession_widget_4": "What are the health benefits?",
+    "suggession_widget_5": "Any allergens I should know about?",
+    "user_information": "User Information",
+    "your_name": "Your Name",
+    "enter_your_name": "Enter your name",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "age": "Age",
+    "height": "Height",
+    "weight": "Weight",
+    "daily_target": "Daily Target",
+    "energy": "Energy",
+    "calories": "Calories",
+    "protein": "Protein",
+    "carbohydrate": "Carbohydrate",
+    "carbohydrates": "Carbohydrates",
+    "fat": "Fat",
+    "fiber": "Fiber"
 }
