--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -1,263 +1,106 @@
 {
-    "fingerprint_scan": "Escaneo de huellas dactilares",
-    "vietnamese": "Vietnamita",
-    "english": "Inglés",
-    "japanese": "Japonés",
-    "spanish": "Español",
-    "korean": "Coreano",
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "japanese": "Japanese",
+    "spanish": "Spanish",
+    "korean": "Korean",
     "hindi": "Hindi",
-    "indonesian": "Indonesio",
-    "onboarding_1": "Diseña animaciones suaves fotograma por fotograma con herramientas de dibujo simples.",
-    "onboarding_2": "Transforma tus ideas en movimiento dibujando fotogramas animados en tu teléfono.",
-    "onboarding_3": "Explora tu creatividad y da vida a tu arte como nunca antes.",
-    "onboarding_4": "Guarda tus animaciones sin esfuerzo y sumérgete en el mundo de la creación hoy.",
+    "indonesian": "Indonesia",
+    "onboarding_1": "Te ayudamos a comprender mejor tus hábitos alimenticios",
+    "onboarding_1_des": "Un análisis nutricional profundo te ayuda a rastrear la calidad de las comidas diarias y a construir una rutina alimentaria sostenible.",
+    "onboarding_2": "Analiza y muestra la cantidad de nutrientes en tus comidas",
+    "onboarding_2_des": "Obtén un desglose nutricional detallado de cada comida, incluyendo cantidades exactas de macronutrientes y micronutrientes.",
+    "onboarding_3": "Mantente al tanto de tus porciones y nutrición.",
+    "onboarding_3_des": "Monitorea fácilmente el tamaño de tus porciones y controla tu ingesta diaria de nutrientes.",
     "continue": "Continuar",
     "language": "Idioma",
     "no_internet": "Sin conexión a Internet",
     "please_check_your_connection": "Por favor, verifica tu conexión",
-    "try_again": "Intenta nuevamente",
-    "get_started": "Comenzar",
+    "try_again": "Intenta de nuevo",
+    "get_started": "Empezar",
     "next": "Siguiente",
     "cancel": "Cancelar",
     "accept": "Aceptar",
     "allow": "Permitir",
     "setting": "Configuración",
-    "rating_5_stars": "Calificar con 5 estrellas",
+    "rating_5_stars": "Calificación de 5 estrellas",
     "feedback": "Comentarios",
-    "share_app": "Compartir la aplicación",
+    "share_app": "Compartir aplicación",
     "share": "Compartir",
-    "create_more": "Crear más",
     "privacy_policy": "Política de privacidad",
-    "rate_app": "Calificar la aplicación",
+    "rate_app": "Califica la aplicación",
     "rate_app_content": "Estamos trabajando arduamente para una mejor experiencia de usuario.",
-    "rate_app_subcontent": "Apreciaríamos mucho si puedes calificarnos.",
+    "rate_app_subcontent": "Agradeceríamos mucho si puedes calificarnos.",
     "rate_us": "Califícanos",
-    "exit_content": "¿Estás seguro de que quieres salir de la aplicación?",
+    "exit_content": "¿Estás seguro de que deseas salir de la aplicación?",
     "exit": "Salir",
     "stay": "Quedarse",
     "retry": "Reintentar",
     "check_your_connection": "Por favor, verifica tu conexión",
     "show_all": "Mostrar todo",
-    "pages": "páginas",
-    "project_name": "Nombre del proyecto",
-    "frame_rate": "Tasa de fotogramas",
-    "background": "Fondo",
-    "format": "Formato",
-    "ratio": "Relación",
-    "select_background": "Seleccionar fondo",
-    "play_animation": "Reproducir animación",
-    "pause_animation": "Pausar animación",
-    "export": "Exportar",
-    "exit_title": "¿Quieres salir?",
-    "exit_subtitle": "Estás en el proceso de crear un proyecto",
-    "frames": "Fotogramas",
-    "template": "Plantillas",
-    "project": "Proyectos",
-    "vip_template_message": "Actualiza a Premium para obtener aplicaciones de Animación Dibujo ilimitadas.",
-    "vip_template_title": "¡Desbloquea Plantillas Premium gratis!",
-    "watch_video": "Ver video",
-    "cat_walk": "Cat Walk",
-    "duck_run": "Duck Run",
-    "chicken_rooster": "Chicken Rooster",
-    "stickman_run": "Stickman Run",
-    "stickman_ninja": "Stickman Ninja",
-    "stickman_jump": "Stickman Jump",
-    "star": "Star",
-    "shark": "Shark",
-    "eating": "Eating",
-    "cute_dance": "Cute Dance",
-    "cool_chicken": "Cool Chicken",
-    "cute_kitten": "Cute Kitten",
-    "funny_man": "Funny Man",
-    "falling_ghost": "Falling Ghost",
-    "run": "Run",
-    "robot": "Robot",
-    "ship": "Ship",
-    "ufo": "UFO",
-    "rocket_fly": "Rocket Fly",
-    "spinning_bear": "Spinning Bear",
-    "cute_pig": "Cute Pig",
-    "stickman_with_sword": "Stickman With Sword",
-    "bonk": "Bonk",
-    "seal_witch": "Seal Witch",
-    "cute_ghost": "Cute Ghost",
-    "cat_pumpkin": "Cat Pumpkin",
-    "duck_love": "Duck Love",
-    "cool_smile": "Cool Smile",
-    "waving_boy": "Waving Boy",
-    "pinky_girl": "Pinky Girl",
-    "girl_with_glasses": "Girl With Glasses",
-    "angry_egg": "Angry Egg",
-    "bunny_cat": "Bunny Cat",
-    "cute_dog": "Cute Dog",
-    "computer_stick_man": "Computer Stick Man",
-    "dance_frog": "Dance Frog",
-    "deadpan_rabbit_look": "Deadpan Rabbit Look",
-    "egg_shining": "Egg Shining",
-    "fatty_bird": "Fatty Bird",
-    "funny_rabbit": "Funny Rabbit",
-    "ghost_popcorn": "Ghost Popcorn",
-    "giraffe_angry": "Giraffe Angry",
-    "giraffe_smart": "Giraffe Smart",
-    "i_dont_know": "I Don't Know",
-    "i_see_you": "I See You",
-    "lightsaber_stickman": "Lightsaber Stickman",
-    "like": "Like",
-    "love_explosion": "Love Explosion",
-    "oh_stick_man": "Oh Stick Man",
-    "super_bongo": "Super Bongo",
-    "spooked_ghost": "Spooked Ghost",
-    "thoughtful_boy": "Thoughtful Boy",
-    "blance": "Blance",
-    "bling": "Bling",
-    "bounce": "Bounce",
-    "bus": "Bus",
-    "car": "Car",
-    "cherry_bloom": "Cherry Bloom",
-    "coffee_ghost": "Coffee Ghost",
-    "dog_working": "Dog Working",
-    "drink": "Drink",
-    "duck_knife": "Duck Knife",
-    "easter": "Easter",
-    "exclamation": "Exclamation",
-    "fire": "Fire",
-    "fish": "Fish",
-    "flying_bird": "Flying Bird",
-    "football": "Football",
-    "heart_baloon": "Heart Baloon",
-    "hero_pixel": "Hero Pixel",
-    "hiccup_frog": "Hiccup Frog",
-    "laughing": "Laughing",
-    "lovely_eye": "Lovely Eye",
-    "panda_pull": "Panda Pull",
-    "peek_cat": "Peek Cat",
-    "question": "Question",
-    "sad": "Sad",
-    "smile": "Smile",
-    "smile_rabbit": "Smile Rabbit",
-    "squishy_cat": "Squishy Cat",
-    "thumb_up": "Thumb Up",
-    "eco_green_car": "Eco Green Car",
-    "face_emoji": "Face Emoji",
-    "fat_dragon": "Fat Dragon",
-    "flying_dog": "Flying Dog",
-    "heart": "Heart",
-    "jumping_cat": "Jumping Cat",
-    "loving_box": "Loving Box",
-    "moving_eye": "Moving Eye",
-    "playful_cat": "Playful Cat",
-    "surprise_ghost": "Surprise Ghost",
-    "walking_ghost": "Walking Ghost",
-    "bloom_flower": "Bloom Flower",
-    "dancing_chick": "Dancing Chick",
-    "dog_wag": "Dog Wag",
-    "dreamy_pup": "Dreamy Pup",
-    "fast_kick": "Fast Kick",
-    "fast_run": "Fast Run",
-    "forward_flip": "Forward Flip",
-    "galaxy_run": "Galaxy Run",
-    "happy_tiger": "Happy Tiger",
-    "hurdle_jump": "Hurdle Jump",
-    "magic_square": "Magic Square",
-    "motor_spin": "Motor Spin",
-    "pink_panther": "Pink Panther",
-    "road_trip": "Road Trip",
-    "rocket_flight": "Rocket Flight",
-    "starship": "Starship",
-    "turbo_bike": "Turbo Bike",
-    "van_drive": "Van Drive",
-    "volleyball_spin": "Volleyball Spin",
-    "wow": "Wow",
-    "empty": "Vacío",
-    "empty_subtitle": "No tienes ninguna animación",
-    "create_your_own_project": "Crea tu propio proyecto",
-    "you_can_see_all_template_here": "Puedes ver todas las plantillas aquí",
-    "project_create_here": "¡Proyectos que creaste aquí!",
-    "draw_something": "Dibuja algo",
-    "if_the_feature": "Si la función no se desbloquea después del pago, puedes ir a ",
-    "store_restore": "Tienda > Restaurar",
-    "or": "o",
-    "click_the": "haz clic en el botón Restaurar a continuación.",
-    "these_purchases": "Estas compras son",
-    "auto_renewable_subscriptions": "suscripciones renovables automáticamente.",
-    "subscription_is": "La suscripción se renueva a menos que se apague al menos 24h antes del final del período actual. El pago se cobra a la cuenta de Google al confirmarse. Puedes ",
-    "cancel_subscription_at": "cancelar tu suscripción en cualquier momento",
-    "through_your": "a través de tu cuenta de Google Play visitando:",
-    "google_play": "Centro de suscripciones de Google Play: ",
-    "alert_1": "El pago se cobra a la cuenta de Google al confirmarse. La suscripción se renueva a menos que se apague al menos 24h antes del final del período actual, la cuenta se cargará también para la renovación. Puedes activarlo o desactivarlo en tu",
-    "account_settings": "Configuración de la cuenta.",
-    "any_unused": "Cualquier parte no utilizada de un período gratuito, si se ofrece, se perderá cuando el usuario compre una suscripción a esa publicación, donde sea aplicable. Ver ",
-    "privacy": "Política de privacidad",
-    "and": "Y",
-    "terms_of_service": "Términos de servicio",
-    "restore": "Restaurar",
-    "upgrade_preminum": "Actualizar a Premium",
-    "auto_renew_monthly": "Suscripción de renovación automática cobrada mensualmente",
-    "monthly": "Mensual",
-    "unlook_your_draw_animation_feature": "Desbloquea tu Animación Dibujo & Obtén todas las funciones Premium",
-    "lifetime_access": "Acceso de por vida",
-    "iap_feature_1": "Acceso a todas las funciones de edición",
-    "iap_feature_2": "Desbloquea todos los íconos adorables",
-    "iap_feature_3": "Recibe monedas adicionales para desbloquear plantillas",
-    "buy_now": "Comprar ahora",
-    "buy_template_title": "Serás dueño de este artículo para siempre. Haz clic en comprar ahora para experimentar cosas increíbles.",
-    "upgrade_to_use_this_feature": "Esta función requiere una actualización de cuenta. ¡Compra el paquete Premium para desbloquear y disfrutar de la experiencia completa!",
-    "not_enough_coin": "No tienes suficientes monedas",
-    "error_occurs": "Ocurrió un error. Por favor, verifica tu conexión e inténtalo de nuevo más tarde.",
-    "can_not_restore": "No podemos restaurar tu compra. Por favor, inténtalo de nuevo.",
-    "login_reward_title": "¡Felicidades! Has recibido tu recompensa de hoy. ¡Sigue iniciando sesión para ganar más!",
-    "claim": "Reclamar",
-    "rate_app_get_coin": "Califica la aplicación con 5⭐ para recibir monedas de bonificación al instante!",
-    "preview": "Vista previa",
-    "sketch": "Boceto",
-    "sketching": "Bocetando",
-    "trace": "Trazar",
-    "save": "Guardar",
-    "opacity": "Opacidad",
-    "picture": "Imagen",
-    "Flashlight": "Linterna",
-    "Flip": "Voltear",
-    "excellent": "¡Excelente!",
-    "save_exit": "Guardar y salir",
-    "save_image_des": "Guarda tu boceto terminado en la sección \"Perfil\" para seguir tu progreso",
-    "take_another_photo": "Tomar otra foto",
-    "add_image_store_success": "Tu boceto se añadió con éxito.",
-    "update_image_store_success": "Tu boceto se actualizó con éxito.",
-    "sample": "Muestra",
-    "your_sketch": "Tu boceto",
-    "transparent": "Sin marco",
-    "with_background": "Original",
-    "gallery": "Colección",
+    "select_language_before_start": "Selecciona el idioma antes de comenzar",
+    "scan_lable": "Escanear etiqueta",
+    "scan_food": "Escanear comida",
+    "daily_intake": "Ingesta diaria",
+    "to_get_started_scan_product": "Para comenzar, escanea la parte frontal del producto o elige de la galería.",
+    "scan_now": "Escanear ahora",
+    "gallery": "Galería",
     "camera": "Cámara",
-    "tutorial": "Tutorial",
-    "tutorial_sketch_1": "1. Después de seleccionar tu imagen favorita, la pantalla de trazado mostrará el dibujo en la pantalla de tu teléfono.",
-    "tutorial_sketch_2": "2. Coloca una hoja de papel sobre la pantalla y procede a dibujar la imagen.",
-    "tutorial_trace_1": "1. Después de seleccionar tu imagen favorita, la pantalla de trazado mostrará el dibujo en la pantalla de tu teléfono.",
-    "tutorial_trace_2": "2. Usa un papel de calco para trazar y dibujar objetos.",
-    "tutorial_trace_3": "3. Coloca el papel de calco sobre la pantalla del móvil y comienza a trazar el objeto.",
-    "video_tutorial": "Tutorial en video",
-    "save_image_success": "¡Imagen guardada con éxito!",
-    "save_image_fail": "¡Error al guardar la imagen!",
-    "stroke_width": "Ancho del trazo",
-    "mirror_symmetry": "Simetría de espejo",
-    "show_guidelines": "Mostrar guías",
-    "reset_brush_settings_to_default": "Restablecer configuración del pincel por defecto",
-    "dash_length": "Longitud del guion",
-    "gap_length": "Longitud del espacio",
-    "glow_radius": "Radio de resplandor",
-    "density": "Densidad",
-    "spread": "Expansión",
-    "randomize_each_dot": "Aleatorizar cada punto",
-    "glow_intensity": "Intensidad del resplandor",
-    "blur_amount": "Cantidad de desenfoque",
-    "outer_glow_size": "Tamaño del resplandor exterior",
-    "inner_glow": "Resplandor interior",
-    "rainbow_mode": "Modo arcoíris",
-    "text": "Texto",
-    "font_size": "Tamaño de fuente",
-    "word_spacing": "Espaciado de palabras",
-    "letter_spacing": "Espaciado de letras",
-    "random_rotation": "Rotación aleatoria",
-    "clear": "Borrar",
-    "clear_all": "Esto borrará todo tu dibujo. ¿Estás seguro de que quieres continuar?"
+    "now_capture_nutrition_label": "Ahora captura la etiqueta nutricional",
+    "capture_or_select_nutrion_lable": "Por favor, captura o selecciona la etiqueta de información nutricional del producto",
+    "result": "Resultado",
+    "optimal_nutrients": "Nutrientes óptimos",
+    "watch_out": "Ten cuidado",
+    "recommendations": "Recomendaciones",
+    "serving_size": "Tamaño de porción",
+    "how_much_did_you_consume": "¿Cuánto consumiste?",
+    "edit_serving_size": "Editar tamaño de porción",
+    "enter_serving_size_in_grams": "Ingresa el tamaño de la porción en gramos",
+    "serving_size_must_be_greater_than_0": "El tamaño de la porción debe ser mayor que 0",
+    "please_select_your_consumption": "Por favor, selecciona tu consumo para continuar",
+    "added_to_today_intake": "¡Agregado a la ingesta de hoy!",
+    "snap_a_picture_of_your_meal_or_pick_one_from_your_gallery": "Toma una foto de tu comida o elige una de tu galería",
+    "take_photo": "Tomar foto",
+    "analysis_results": "Resultados del análisis",
+    "total_nutrients": "Nutrientes totales",
+    "no_food_items_analyzed_yet": "Aún no se han analizado alimentos",
+    "daily_nutrition": "Nutrición diaria",
+    "today_intake": "Ingesta de hoy",
+    "food_items_history": "Historial de alimentos",
+    "this_section_show_all_food_item_you_have_comsume": "Esta sección muestra todos los alimentos que has consumido hoy, junto con sus valores calóricos y marcas de tiempo.",
+    "got_it": "Entendido",
+    "detailed_nutrients": "Nutrientes detallados",
+    "chat_with_AI": "Chatear con IA",
+    "welcome_message": "👋 ¡Hola! Soy tu asistente de nutrición y salud. ¿Cómo puedo ayudarte hoy? 🍎",
+    "ask_AI": "Preguntar a IA",
+    "what_would_you_like_to_know_about": "👋 Hola, ¿qué te gustaría saber sobre",
+    "suggestions_1": "🍽️ ¿Es equilibrada esta comida?",
+    "suggestions_2": "🍊 ¿Es rica en vitaminas esta comida?",
+    "suggestions_3": "🏋️‍♂️ ¿Es buena esta comida para perder peso?",
+    "suggestions_4": "💪 ¿Cómo apoya esta comida el crecimiento muscular?",
+    "suggestions_5": "🌟 ¿Cuáles son los beneficios para la salud de esta comida?",
+    "no_results_found": "¡No se encontraron resultados!",
+    "add_food_item": "Agregar artículo de comida",
+    "suggession_widget_1": "¿Qué nutrientes contiene este alimento?",
+    "suggession_widget_2": "¿Es este alimento saludable para mí?",
+    "suggession_widget_3": "¿Cuántas calorías hay en esta porción?",
+    "suggession_widget_4": "¿Cuáles son los beneficios para la salud?",
+    "suggession_widget_5": "¿Hay alérgenos que deba conocer?",
+    "user_information": "Información del Usuario",
+    "your_name": "Tu Nombre",
+    "enter_your_name": "Ingresa tu nombre",
+    "gender": "Género",
+    "male": "Masculino",
+    "female": "Femenino",
+    "age": "Edad",
+    "height": "Altura",
+    "weight": "Peso",
+    "daily_target": "Objetivo Diario",
+    "energy": "Energía",
+    "calories": "Calorías",
+    "protein": "Proteína",
+    "carbohydrate": "Carbohidrato",
+    "carbohydrates": "Carbohidratos",
+    "fat": "Grasa",
+    "fiber": "Fibra"
 }
