--- a/assets/translations/hi.json
+++ b/assets/translations/hi.json
@@ -1,20 +1,21 @@
 {
-    "fingerprint_scan": "फिंगरप्रिंट स्कैन",
-    "vietnamese": "वियतनामी",
-    "english": "अंग्रेजी",
-    "japanese": "जापानी",
-    "spanish": "स्पेनिश",
-    "korean": "कोरियाई",
-    "hindi": "हिंदी",
-    "indonesian": "इंडोनेशियाई",
-    "onboarding_1": "सादा चित्रण उपकरणों के साथ प्रत्येक फ्रेम द्वारा स्मूथ एनीमेशन डिज़ाइन करें।",
-    "onboarding_2": "अपने विचारों को गतिशील रूप से चित्रित करके गति में बदलें।",
-    "onboarding_3": "अपनी रचनात्मकता का अन्वेषण करें और अपने कला कार्य को पहले से कहीं ज्यादा जीवन में लाएं।",
-    "onboarding_4": "अपने एनीमेशन को सहज रूप से सेव करें और आज ही निर्माण की दुनिया में प्रवेश करें!",
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "japanese": "Japanese",
+    "spanish": "Spanish",
+    "korean": "Korean",
+    "hindi": "Hindi",
+    "indonesian": "Indonesia",
+    "onboarding_1": "हम आपकी खाने की आदतों को बेहतर समझने में मदद करते हैं",
+    "onboarding_1_des": "गहन पोषण विश्लेषण आपको दैनिक भोजन की गुणवत्ता का ट्रैक रखने और एक सतत खाने की दिनचर्या बनाने में मदद करता है।",
+    "onboarding_2": "अपने भोजन में पोषक तत्वों की मात्रा का विश्लेषण और प्रदर्शन करें",
+    "onboarding_2_des": "हर भोजन का विस्तृत पोषण विवरण प्राप्त करें, जिसमें मैक्रोन्यूट्रिएंट्स और माइक्रोन्यूट्रिएंट्स की सटीक मात्रा शामिल है।",
+    "onboarding_3": "अपने भाग और पोषण पर ध्यान रखें।",
+    "onboarding_3_des": "आसान तरीके से अपने भाग के आकार की निगरानी करें और अपनी दैनिक पोषक तत्वों की मात्रा पर नियंत्रण रखें।",
     "continue": "जारी रखें",
     "language": "भाषा",
-    "no_internet": "इंटरनेट नहीं है",
-    "please_check_your_connection": "कृपया अपनी कनेक्शन की जाँच करें",
+    "no_internet": "कोई इंटरनेट नहीं",
+    "please_check_your_connection": "कृपया अपनी कनेक्शन की जांच करें",
     "try_again": "फिर से प्रयास करें",
     "get_started": "शुरू करें",
     "next": "अगला",
@@ -22,242 +23,84 @@
     "accept": "स्वीकार करें",
     "allow": "अनुमति दें",
     "setting": "सेटिंग",
-    "rating_5_stars": "5 सितारे रेटिंग करें",
+    "rating_5_stars": "5 सितारों की रेटिंग",
     "feedback": "प्रतिक्रिया",
     "share_app": "ऐप साझा करें",
     "share": "साझा करें",
-    "create_more": "और बनाएं",
     "privacy_policy": "गोपनीयता नीति",
-    "rate_app": "ऐप को रेट करें",
+    "rate_app": "ऐप की रेटिंग करें",
     "rate_app_content": "हम बेहतर उपयोगकर्ता अनुभव के लिए कड़ी मेहनत कर रहे हैं।",
-    "rate_app_subcontent": "हमें रेटिंग देने के लिए हम बहुत आभारी होंगे।",
+    "rate_app_subcontent": "अगर आप हमें रेट कर सकें तो हम बहुत आभारी होंगे।",
     "rate_us": "हमें रेट करें",
-    "exit_content": "क्या आप सच में एप्लिकेशन से बाहर निकलना चाहते हैं?",
+    "exit_content": "क्या आप निश्चित रूप से ऐप से बाहर निकलना चाहते हैं?",
     "exit": "बाहर निकलें",
-    "stay": "रुको",
-    "retry": "पुनः प्रयास करें",
-    "check_your_connection": "कृपया अपनी कनेक्शन की जाँच करें",
-    "show_all": "सभी दिखाएं",
-    "pages": "पृष्ठ",
-    "project_name": "प्रोजेक्ट का नाम",
-    "frame_rate": "फ्रेम दर",
-    "background": "पृष्ठभूमि",
-    "format": "फ़ॉर्मेट",
-    "ratio": "अनुपात",
-    "select_background": "पृष्ठभूमि चुनें",
-    "play_animation": "एनीमेशन चलाएं",
-    "pause_animation": "एनीमेशन को विराम दें",
-    "export": "निर्यात करें",
-    "exit_title": "क्या आप बाहर निकलना चाहते हैं?",
-    "exit_subtitle": "आप एक प्रोजेक्ट बना रहे हैं",
-    "frames": "फ्रेम्स",
-    "template": "टेम्पलेट्स",
-    "project": "प्रोजेक्ट्स",
-    "vip_template_message": "अनलिमिटेड ड्रॉ एनीमेशन एप्लिकेशन के लिए प्रीमियम में अपग्रेड करें।",
-    "vip_template_title": "प्रीमियम टेम्पलेट को मुफ्त में अनलॉक करें!",
-    "watch_video": "विज्ञापन देखें",
-    "cat_walk": "Cat Walk",
-    "duck_run": "Duck Run",
-    "chicken_rooster": "Chicken Rooster",
-    "stickman_run": "Stickman Run",
-    "stickman_ninja": "Stickman Ninja",
-    "stickman_jump": "Stickman Jump",
-    "star": "Star",
-    "shark": "Shark",
-    "eating": "Eating",
-    "cute_dance": "Cute Dance",
-    "cool_chicken": "Cool Chicken",
-    "cute_kitten": "Cute Kitten",
-    "funny_man": "Funny Man",
-    "falling_ghost": "Falling Ghost",
-    "run": "Run",
-    "robot": "Robot",
-    "ship": "Ship",
-    "ufo": "UFO",
-    "rocket_fly": "Rocket Fly",
-    "spinning_bear": "Spinning Bear",
-    "cute_pig": "Cute Pig",
-    "stickman_with_sword": "Stickman With Sword",
-    "bonk": "Bonk",
-    "seal_witch": "Seal Witch",
-    "cute_ghost": "Cute Ghost",
-    "cat_pumpkin": "Cat Pumpkin",
-    "duck_love": "Duck Love",
-    "cool_smile": "Cool Smile",
-    "waving_boy": "Waving Boy",
-    "pinky_girl": "Pinky Girl",
-    "girl_with_glasses": "Girl With Glasses",
-    "angry_egg": "Angry Egg",
-    "bunny_cat": "Bunny Cat",
-    "cute_dog": "Cute Dog",
-    "computer_stick_man": "Computer Stick Man",
-    "dance_frog": "Dance Frog",
-    "deadpan_rabbit_look": "Deadpan Rabbit Look",
-    "egg_shining": "Egg Shining",
-    "fatty_bird": "Fatty Bird",
-    "funny_rabbit": "Funny Rabbit",
-    "ghost_popcorn": "Ghost Popcorn",
-    "giraffe_angry": "Giraffe Angry",
-    "giraffe_smart": "Giraffe Smart",
-    "i_dont_know": "I Don't Know",
-    "i_see_you": "I See You",
-    "lightsaber_stickman": "Lightsaber Stickman",
-    "like": "Like",
-    "love_explosion": "Love Explosion",
-    "oh_stick_man": "Oh Stick Man",
-    "super_bongo": "Super Bongo",
-    "spooked_ghost": "Spooked Ghost",
-    "thoughtful_boy": "Thoughtful Boy",
-    "blance": "Blance",
-    "bling": "Bling",
-    "bounce": "Bounce",
-    "bus": "Bus",
-    "car": "Car",
-    "cherry_bloom": "Cherry Bloom",
-    "coffee_ghost": "Coffee Ghost",
-    "dog_working": "Dog Working",
-    "drink": "Drink",
-    "duck_knife": "Duck Knife",
-    "easter": "Easter",
-    "exclamation": "Exclamation",
-    "fire": "Fire",
-    "fish": "Fish",
-    "flying_bird": "Flying Bird",
-    "football": "Football",
-    "heart_baloon": "Heart Baloon",
-    "hero_pixel": "Hero Pixel",
-    "hiccup_frog": "Hiccup Frog",
-    "laughing": "Laughing",
-    "lovely_eye": "Lovely Eye",
-    "panda_pull": "Panda Pull",
-    "peek_cat": "Peek Cat",
-    "question": "Question",
-    "sad": "Sad",
-    "smile": "Smile",
-    "smile_rabbit": "Smile Rabbit",
-    "squishy_cat": "Squishy Cat",
-    "thumb_up": "Thumb Up",
-    "eco_green_car": "Eco Green Car",
-    "face_emoji": "Face Emoji",
-    "fat_dragon": "Fat Dragon",
-    "flying_dog": "Flying Dog",
-    "heart": "Heart",
-    "jumping_cat": "Jumping Cat",
-    "loving_box": "Loving Box",
-    "moving_eye": "Moving Eye",
-    "playful_cat": "Playful Cat",
-    "surprise_ghost": "Surprise Ghost",
-    "walking_ghost": "Walking Ghost",
-    "bloom_flower": "Bloom Flower",
-    "dancing_chick": "Dancing Chick",
-    "dog_wag": "Dog Wag",
-    "dreamy_pup": "Dreamy Pup",
-    "fast_kick": "Fast Kick",
-    "fast_run": "Fast Run",
-    "forward_flip": "Forward Flip",
-    "galaxy_run": "Galaxy Run",
-    "happy_tiger": "Happy Tiger",
-    "hurdle_jump": "Hurdle Jump",
-    "magic_square": "Magic Square",
-    "motor_spin": "Motor Spin",
-    "pink_panther": "Pink Panther",
-    "road_trip": "Road Trip",
-    "rocket_flight": "Rocket Flight",
-    "starship": "Starship",
-    "turbo_bike": "Turbo Bike",
-    "van_drive": "Van Drive",
-    "volleyball_spin": "Volleyball Spin",
-    "wow": "Wow",
-    "empty": "खाली",
-    "empty_subtitle": "आपके पास कोई एनीमेशन नहीं है",
-    "create_your_own_project": "अपना प्रोजेक्ट बनाएं",
-    "you_can_see_all_template_here": "आप यहाँ सभी टेम्पलेट्स देख सकते हैं",
-    "project_create_here": "यहाँ आपके द्वारा बनाए गए प्रोजेक्ट्स!",
-    "draw_something": "कुछ ड्रा करें",
-    "if_the_feature": "यदि भुगतान के बाद फीचर अनलॉक नहीं होता है, तो आप ",
-    "store_restore": "स्टोर > पुनर्स्थापित करें",
-    "or": "या",
-    "click_the": "नीचे पुनर्स्थापना बटन पर क्लिक करें।",
-    "these_purchases": "यह खरीदारी हैं",
-    "auto_renewable_subscriptions": "स्वतः नवीनीकरण योग्य सदस्यताएँ।",
-    "subscription_is": "सदस्यता नवीनीकरण से पहले कम से कम 24 घंटे बंद करने के बाद नवीनीकरण होगा। भुगतान Google खाते से लिया जाएगा। आप ",
-    "cancel_subscription_at": "किसी भी समय सदस्यता रद्द कर सकते हैं",
-    "through_your": "अपने Google Play खाते के माध्यम से:",
-    "google_play": "Google Play सदस्यता केंद्र: ",
-    "alert_1": "भुगतान Google खाते से लिया जाएगा। सदस्यता तब तक नवीनीकरण होगी जब तक उसे वर्तमान अवधि के अंत से 24 घंटे पहले बंद नहीं किया जाता। आप इसे अपनी",
-    "account_settings": "खाता सेटिंग्स में बंद या चालू कर सकते हैं।",
-    "any_unused": "यदि कोई मुफ्त अवधि प्रदान की गई है, तो उपयोगकर्ता जब सदस्यता खरीदते हैं तो अप्रयुक्त हिस्सा समाप्त हो जाएगा।",
-    "privacy": "गोपनीयता नीति",
-    "and": "और",
-    "terms_of_service": "सेवा की शर्तें",
-    "restore": "पुनर्स्थापित करें",
-    "upgrade_preminum": "प्रीमियम में अपग्रेड करें",
-    "auto_renew_monthly": "सदस्यता स्वतः नवीनीकृत होती है और मासिक शुल्क लिया जाता है",
-    "monthly": "मासिक",
-    "unlook_your_draw_animation_feature": "आपका ड्रॉ एनीमेशन फीचर अनलॉक करें और सभी प्रीमियम सुविधाएं प्राप्त करें",
-    "lifetime_access": "जीवन भर की पहुंच",
-    "iap_feature_1": "सभी संपादन सुविधाओं तक पहुंच",
-    "iap_feature_2": "सभी प्यारे आइकन अनलॉक करें",
-    "iap_feature_3": "टेम्पलेट्स को अनलॉक करने के लिए अतिरिक्त कॉइन प्राप्त करें",
-    "buy_now": "अभी खरीदें",
-    "buy_template_title": "आप इस वस्तु के हमेशा मालिक होंगे। अद्भुत चीज़ों का अनुभव करने के लिए अभी खरीदें पर क्लिक करें।",
-    "upgrade_to_use_this_feature": "इस सुविधा का उपयोग करने के लिए खाता अपग्रेड की आवश्यकता है। पूर्ण अनुभव को अनलॉक और आनंद लेने के लिए प्रीमियम पैकेज खरीदें!",
-    "not_enough_coin": "आपके पास पर्याप्त सिक्के नहीं हैं",
-    "error_occurs": "एक त्रुटि हुई है। कृपया अपना कनेक्शन जांचें और बाद में पुनः प्रयास करें।",
-    "can_not_restore": "हम आपकी खरीद को पुनर्स्थापित करने में असमर्थ हैं। कृपया पुनः प्रयास करें।",
-    "login_reward_title": "बधाई हो! आपने आज का इनाम प्राप्त कर लिया है। अधिक कमाने के लिए लॉगिन करते रहें!",
-    "claim": "दावा करें",
-    "rate_app_get_coin": "ऐप को 5⭐ रेट करें और तुरंत बोनस कॉइन प्राप्त करें!",
-    "preview": "पूर्वावलोकन",
-    "sketch": "रेखा चित्र",
-    "sketching": "रेखांकन",
-    "trace": "अनुरेखण",
-    "save": "सहेजें",
-    "opacity": "अस्पष्टता",
-    "picture": "चित्र",
-    "Flashlight": "टॉर्च",
-    "Flip": "पलटें",
-    "excellent": "उत्कृष्ट!",
-    "save_exit": "सहेजें और बाहर निकलें",
-    "save_image_des": "अपनी समाप्त रेखा चित्र को \"प्रोफाइल\" अनुभाग में सहेजें ताकि आप अपनी प्रगति को ट्रैक कर सकें",
-    "take_another_photo": "एक और फोटो लें",
-    "add_image_store_success": "आपका रेखा चित्र सफलतापूर्वक जोड़ा गया।",
-    "update_image_store_success": "आपका रेखा चित्र सफलतापूर्वक अपडेट किया गया।",
-    "sample": "नमूना",
-    "your_sketch": "आपका रेखा चित्र",
-    "transparent": "फ्रेम रहित",
-    "with_background": "मूल",
-    "gallery": "संग्रह",
+    "stay": "रुकें",
+    "retry": "फिर से प्रयास करें",
+    "check_your_connection": "कृपया अपनी कनेक्शन की जांच करें",
+    "show_all": "सभी दिखाएँ",
+    "select_language_before_start": "शुरू करने से पहले भाषा चुनें",
+    "scan_lable": "लेबल स्कैन करें",
+    "scan_food": "खाना स्कैन करें",
+    "daily_intake": "दैनिक सेवन",
+    "to_get_started_scan_product": "शुरू करने के लिए, उत्पाद के सामने का स्कैन करें या गैलरी से चुनें!",
+    "scan_now": "अब स्कैन करें",
+    "gallery": "गैलरी",
     "camera": "कैमरा",
-    "tutorial": "ट्यूटोरियल",
-    "tutorial_sketch_1": "1. अपनी पसंदीदा छवि चुनने के बाद, अनुरेखण स्क्रीन आपके फ़ोन की स्क्रीन पर चित्र दिखाएगा।",
-    "tutorial_sketch_2": "2. स्क्रीन पर एक कागज रखें और चित्र बनाना शुरू करें।",
-    "tutorial_trace_1": "1. अपनी पसंदीदा छवि चुनने के बाद, अनुरेखण स्क्रीन आपके फ़ोन की स्क्रीन पर चित्र दिखाएगा।",
-    "tutorial_trace_2": "2. अनुरेखण और ड्राइंग के लिए ट्रेसिंग पेपर का उपयोग करें।",
-    "tutorial_trace_3": "3. ट्रेसिंग पेपर को मोबाइल स्क्रीन पर रखें और ऑब्जेक्ट को ट्रेस करना शुरू करें।",
-    "video_tutorial": "वीडियो ट्यूटोरियल",
-    "save_image_success": "छवि सफलतापूर्वक सहेजी गई!",
-    "save_image_fail": "छवि सहेजने में विफल!",
-    "stroke_width": "स्ट्रोक चौड़ाई",
-    "mirror_symmetry": "दर्पण समरूपता",
-    "show_guidelines": "दिशानिर्देश दिखाएं",
-    "reset_brush_settings_to_default": "ब्रश सेटिंग्स को डिफ़ॉल्ट पर रीसेट करें",
-    "dash_length": "डैश की लंबाई",
-    "gap_length": "अंतर की लंबाई",
-    "glow_radius": "चमक की त्रिज्या",
-    "density": "घनत्व",
-    "spread": "प्रसार",
-    "randomize_each_dot": "प्रत्येक बिंदु को यादृच्छिक बनाएं",
-    "glow_intensity": "चमक की तीव्रता",
-    "blur_amount": "धुंधलापन मात्रा",
-    "outer_glow_size": "बाहरी चमक का आकार",
-    "inner_glow": "आंतरिक चमक",
-    "rainbow_mode": "इंद्रधनुष मोड",
-    "text": "पाठ",
-    "font_size": "फ़ॉन्ट आकार",
-    "word_spacing": "शब्दों के बीच की दूरी",
-    "letter_spacing": "अक्षरों के बीच की दूरी",
-    "random_rotation": "यादृच्छिक घुमाव",
-    "clear": "साफ करें",
-    "clear_all": "यह आपके सभी चित्र को साफ कर देगा। क्या आप सुनिश्चित हैं कि आप जारी रखना चाहते हैं?"
+    "now_capture_nutrition_label": "अब पोषण लेबल कैप्चर करें",
+    "capture_or_select_nutrion_lable": "कृपया उत्पाद के पोषण तथ्य लेबल को कैप्चर या सेलेक्ट करें",
+    "result": "परिणाम",
+    "optimal_nutrients": "सर्वोत्तम पोषक तत्व",
+    "watch_out": "सावधान रहें",
+    "recommendations": "सिफारिशें",
+    "serving_size": "सेवा का आकार",
+    "how_much_did_you_consume": "आपने कितना सेवन किया?",
+    "edit_serving_size": "सेवा का आकार संपादित करें",
+    "enter_serving_size_in_grams": "सेवा का आकार ग्राम में दर्ज करें",
+    "serving_size_must_be_greater_than_0": "सेवा का आकार 0 से अधिक होना चाहिए",
+    "please_select_your_consumption": "कृपया अपनी खपत का चयन करें ताकि आप आगे बढ़ सकें",
+    "added_to_today_intake": "आज की सेवन में जोड़ा गया!",
+    "snap_a_picture_of_your_meal_or_pick_one_from_your_gallery": "अपने भोजन की तस्वीर लें या अपनी गैलरी से एक चुनें",
+    "take_photo": "फोटो लें",
+    "analysis_results": "विश्लेषण परिणाम",
+    "total_nutrients": "कुल पोषक तत्व",
+    "no_food_items_analyzed_yet": "अभी तक कोई खाद्य वस्तुएं विश्लेषित नहीं की गई हैं",
+    "daily_nutrition": "दैनिक पोषण",
+    "today_intake": "आज की सेवन",
+    "food_items_history": "खाद्य वस्तुओं का इतिहास",
+    "this_section_show_all_food_item_you_have_comsume": "यह अनुभाग उन सभी खाद्य वस्तुओं को दिखाता है जो आपने आज खाई हैं, उनके कैलोरी मान और समय के साथ।",
+    "got_it": "समझ गया",
+    "detailed_nutrients": "विस्तृत पोषक तत्व",
+    "chat_with_AI": "AI से चैट करें",
+    "welcome_message": "👋 हेलो! मैं आपकी पोषण और स्वास्थ्य सहायक हूँ। मैं आपकी आज कैसे मदद कर सकता हूँ? 🍎",
+    "ask_AI": "AI से पूछें",
+    "what_would_you_like_to_know_about": "👋 हेलो, आपको किस बारे में जानना है",
+    "suggestions_1": "🍽️ क्या यह भोजन संतुलित है?",
+    "suggestions_2": "🍊 क्या यह भोजन विटामिन में समृद्ध है?",
+    "suggestions_3": "🏋️‍♂️ क्या यह भोजन वजन घटाने के लिए अच्छा है?",
+    "suggestions_4": "💪 यह भोजन मांसपेशियों के विकास का समर्थन कैसे करता है?",
+    "suggestions_5": "🌟 इस भोजन के स्वास्थ्य लाभ क्या हैं?",
+    "no_results_found": "कोई परिणाम नहीं मिला!",
+    "add_food_item": "खाद्य वस्तु जोड़ें",
+    "suggession_widget_1": "इस भोजन में कौन से पोषक तत्व हैं?",
+    "suggession_widget_2": "क्या यह भोजन मेरे लिए स्वस्थ है?",
+    "suggession_widget_3": "इस सेवा में कितनी कैलोरी हैं?",
+    "suggession_widget_4": "क्या स्वास्थ्य लाभ हैं?",
+    "suggession_widget_5": "क्या कोई एलर्जेन है जिसे मुझे जानना चाहिए?",
+    "user_information": "उपयोगकर्ता जानकारी",
+    "your_name": "आपका नाम",
+    "enter_your_name": "अपना नाम दर्ज करें",
+    "gender": "लिंग",
+    "male": "पुरुष",
+    "female": "महिला",
+    "age": "उम्र",
+    "height": "ऊंचाई",
+    "weight": "वजन",
+    "daily_target": "दैनिक लक्ष्य",
+    "energy": "ऊर्जा",
+    "calories": "कलोरी",
+    "protein": "प्रोटीन",
+    "carbohydrate": "कार्बोहाइड्रेट",
+    "carbohydrates": "कार्बोहाइड्रेट",
+    "fat": "वसा",
+    "fiber": "फाइबर"
 }
