--- a/assets/translations/id.json
+++ b/assets/translations/id.json
@@ -1,263 +1,106 @@
 {
-    "fingerprint_scan": "Pemindaian sidik jari",
-    "vietnamese": "Vietnam",
-    "english": "Inggris",
-    "japanese": "Jepang",
-    "spanish": "Spanyol",
-    "korean": "Korea",
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "japanese": "Japanese",
+    "spanish": "Spanish",
+    "korean": "Korean",
     "hindi": "Hindi",
     "indonesian": "Indonesia",
-    "onboarding_1": "Desain animasi halus frame-by-frame dengan alat gambar sederhana.",
-    "onboarding_2": "Transformasi ide Anda menjadi gerakan dengan menggambar frame animasi di ponsel Anda.",
-    "onboarding_3": "Jelajahi kreativitas Anda dan hidupkan karya seni Anda lebih dari sebelumnya.",
-    "onboarding_4": "Simpan animasi Anda dengan mudah dan terjun ke dunia kreasi hari ini.",
+    "onboarding_1": "Kami membantu Anda memahami kebiasaan makan Anda dengan lebih baik",
+    "onboarding_1_des": "Analisis nutrisi mendalam membantu Anda melacak kualitas makanan harian dan membangun rutinitas makan yang berkelanjutan.",
+    "onboarding_2": "Analisis dan tampilkan jumlah nutrisi dalam makanan Anda",
+    "onboarding_2_des": "Dapatkan rincian nutrisi lengkap dari setiap makanan, termasuk jumlah makronutrien dan mikronutrien yang tepat.",
+    "onboarding_3": "Tetap perhatikan porsi dan nutrisi Anda.",
+    "onboarding_3_des": "Dengan mudah memantau ukuran porsi Anda dan mengontrol asupan nutrisi harian Anda.",
     "continue": "Lanjutkan",
     "language": "Bahasa",
-    "no_internet": "Tidak ada internet",
+    "no_internet": "Tidak ada Internet",
     "please_check_your_connection": "Silakan periksa koneksi Anda",
     "try_again": "Coba lagi",
     "get_started": "Mulai",
-    "next": "Berikutnya",
+    "next": "Selanjutnya",
     "cancel": "Batal",
     "accept": "Terima",
     "allow": "Izinkan",
     "setting": "Pengaturan",
-    "rating_5_stars": "Beri rating 5 bintang",
-    "feedback": "Umpan balik",
-    "share_app": "Bagikan aplikasi",
+    "rating_5_stars": "Rating 5 Bintang",
+    "feedback": "Umpan Balik",
+    "share_app": "Bagikan Aplikasi",
     "share": "Bagikan",
-    "create_more": "Buat lebih banyak",
     "privacy_policy": "Kebijakan Privasi",
-    "rate_app": "Beri rating aplikasi",
-    "rate_app_content": "Kami sedang bekerja keras untuk pengalaman pengguna yang lebih baik.",
-    "rate_app_subcontent": "Kami akan sangat menghargai jika Anda bisa memberi rating.",
-    "rate_us": "Beri kami rating",
+    "rate_app": "Beri Nilai Aplikasi",
+    "rate_app_content": "Kami bekerja keras untuk pengalaman pengguna yang lebih baik.",
+    "rate_app_subcontent": "Kami sangat menghargai jika Anda dapat memberi kami penilaian.",
+    "rate_us": "Beri kami penilaian",
     "exit_content": "Apakah Anda yakin ingin keluar dari aplikasi?",
     "exit": "Keluar",
-    "stay": "Tetap",
-    "retry": "Coba lagi",
+    "stay": "Tinggal",
+    "retry": "Coba Lagi",
     "check_your_connection": "Silakan periksa koneksi Anda",
-    "show_all": "Tampilkan semua",
-    "pages": "Halaman",
-    "project_name": "Nama proyek",
-    "frame_rate": "Frame rate",
-    "background": "Latar belakang",
-    "format": "Format",
-    "ratio": "Rasio",
-    "select_background": "Pilih latar belakang",
-    "play_animation": "Putar animasi",
-    "pause_animation": "Jeda animasi",
-    "export": "Ekspor",
-    "exit_title": "Apakah Anda ingin keluar?",
-    "exit_subtitle": "Anda sedang membuat proyek",
-    "frames": "Frame",
-    "template": "Template",
-    "project": "Proyek",
-    "vip_template_message": "Upgrade ke Premium untuk aplikasi Animasi Gambar tanpa batas.",
-    "vip_template_title": "Buka Template Premium gratis!",
-    "watch_video": "Tonton video",
-    "cat_walk": "Cat Walk",
-    "duck_run": "Duck Run",
-    "chicken_rooster": "Chicken Rooster",
-    "stickman_run": "Stickman Run",
-    "stickman_ninja": "Stickman Ninja",
-    "stickman_jump": "Stickman Jump",
-    "star": "Star",
-    "shark": "Shark",
-    "eating": "Eating",
-    "cute_dance": "Cute Dance",
-    "cool_chicken": "Cool Chicken",
-    "cute_kitten": "Cute Kitten",
-    "funny_man": "Funny Man",
-    "falling_ghost": "Falling Ghost",
-    "run": "Run",
-    "robot": "Robot",
-    "ship": "Ship",
-    "ufo": "UFO",
-    "rocket_fly": "Rocket Fly",
-    "spinning_bear": "Spinning Bear",
-    "cute_pig": "Cute Pig",
-    "stickman_with_sword": "Stickman With Sword",
-    "bonk": "Bonk",
-    "seal_witch": "Seal Witch",
-    "cute_ghost": "Cute Ghost",
-    "cat_pumpkin": "Cat Pumpkin",
-    "duck_love": "Duck Love",
-    "cool_smile": "Cool Smile",
-    "waving_boy": "Waving Boy",
-    "pinky_girl": "Pinky Girl",
-    "girl_with_glasses": "Girl With Glasses",
-    "angry_egg": "Angry Egg",
-    "bunny_cat": "Bunny Cat",
-    "cute_dog": "Cute Dog",
-    "computer_stick_man": "Computer Stick Man",
-    "dance_frog": "Dance Frog",
-    "deadpan_rabbit_look": "Deadpan Rabbit Look",
-    "egg_shining": "Egg Shining",
-    "fatty_bird": "Fatty Bird",
-    "funny_rabbit": "Funny Rabbit",
-    "ghost_popcorn": "Ghost Popcorn",
-    "giraffe_angry": "Giraffe Angry",
-    "giraffe_smart": "Giraffe Smart",
-    "i_dont_know": "I Don't Know",
-    "i_see_you": "I See You",
-    "lightsaber_stickman": "Lightsaber Stickman",
-    "like": "Like",
-    "love_explosion": "Love Explosion",
-    "oh_stick_man": "Oh Stick Man",
-    "super_bongo": "Super Bongo",
-    "spooked_ghost": "Spooked Ghost",
-    "thoughtful_boy": "Thoughtful Boy",
-    "blance": "Blance",
-    "bling": "Bling",
-    "bounce": "Bounce",
-    "bus": "Bus",
-    "car": "Car",
-    "cherry_bloom": "Cherry Bloom",
-    "coffee_ghost": "Coffee Ghost",
-    "dog_working": "Dog Working",
-    "drink": "Drink",
-    "duck_knife": "Duck Knife",
-    "easter": "Easter",
-    "exclamation": "Exclamation",
-    "fire": "Fire",
-    "fish": "Fish",
-    "flying_bird": "Flying Bird",
-    "football": "Football",
-    "heart_baloon": "Heart Baloon",
-    "hero_pixel": "Hero Pixel",
-    "hiccup_frog": "Hiccup Frog",
-    "laughing": "Laughing",
-    "lovely_eye": "Lovely Eye",
-    "panda_pull": "Panda Pull",
-    "peek_cat": "Peek Cat",
-    "question": "Question",
-    "sad": "Sad",
-    "smile": "Smile",
-    "smile_rabbit": "Smile Rabbit",
-    "squishy_cat": "Squishy Cat",
-    "thumb_up": "Thumb Up",
-    "eco_green_car": "Eco Green Car",
-    "face_emoji": "Face Emoji",
-    "fat_dragon": "Fat Dragon",
-    "flying_dog": "Flying Dog",
-    "heart": "Heart",
-    "jumping_cat": "Jumping Cat",
-    "loving_box": "Loving Box",
-    "moving_eye": "Moving Eye",
-    "playful_cat": "Playful Cat",
-    "surprise_ghost": "Surprise Ghost",
-    "walking_ghost": "Walking Ghost",
-    "bloom_flower": "Bloom Flower",
-    "dancing_chick": "Dancing Chick",
-    "dog_wag": "Dog Wag",
-    "dreamy_pup": "Dreamy Pup",
-    "fast_kick": "Fast Kick",
-    "fast_run": "Fast Run",
-    "forward_flip": "Forward Flip",
-    "galaxy_run": "Galaxy Run",
-    "happy_tiger": "Happy Tiger",
-    "hurdle_jump": "Hurdle Jump",
-    "magic_square": "Magic Square",
-    "motor_spin": "Motor Spin",
-    "pink_panther": "Pink Panther",
-    "road_trip": "Road Trip",
-    "rocket_flight": "Rocket Flight",
-    "starship": "Starship",
-    "turbo_bike": "Turbo Bike",
-    "van_drive": "Van Drive",
-    "volleyball_spin": "Volleyball Spin",
-    "wow": "Wow",
-    "empty": "Kosong",
-    "empty_subtitle": "Anda tidak memiliki animasi",
-    "create_your_own_project": "Buat proyek Anda sendiri",
-    "you_can_see_all_template_here": "Anda dapat melihat semua template di sini",
-    "project_create_here": "Proyek yang Anda buat di sini!",
-    "draw_something": "Gambar sesuatu",
-    "if_the_feature": "Jika fitur tidak terbuka setelah pembayaran, Anda bisa pergi ke ",
-    "store_restore": "Toko > Pulihkan",
-    "or": "atau",
-    "click_the": "klik tombol Pulihkan di bawah.",
-    "these_purchases": "Pembelian ini",
-    "auto_renewable_subscriptions": "Langganan yang dapat diperbarui otomatis.",
-    "subscription_is": "Langganan akan diperbarui kecuali dimatikan setidaknya 24 jam sebelum akhir periode saat ini.",
-    "cancel_subscription_at": "Anda dapat membatalkan langganan kapan saja",
-    "through_your": "melalui akun Google Play Anda:",
-    "google_play": "Pusat Langganan Google Play: ",
-    "alert_1": "Pembayaran akan dibebankan pada akun Google Anda setelah konfirmasi.",
-    "account_settings": "Pengaturan Akun.",
-    "any_unused": "Setiap bagian yang tidak digunakan dari periode gratis, jika ada, akan hilang ketika pengguna membeli langganan untuk publikasi tersebut.",
-    "privacy": "Kebijakan Privasi",
-    "and": "dan",
-    "terms_of_service": "Syarat Layanan",
-    "restore": "Pulihkan",
-    "upgrade_preminum": "Upgrade ke Premium",
-    "auto_renew_monthly": "Berlangganan perpanjangan otomatis yang ditagih setiap bulan",
-    "monthly": "Bulanan",
-    "unlook_your_draw_animation_feature": "Buka fitur Animasi Gambar Anda dan dapatkan semua fitur Premium",
-    "lifetime_access": "Akses Seumur Hidup",
-    "iap_feature_1": "Akses ke semua fitur penyuntingan",
-    "iap_feature_2": "Buka semua ikon lucu",
-    "iap_feature_3": "Dapatkan koin ekstra untuk membuka template",
-    "buy_now": "Beli Sekarang",
-    "buy_template_title": "Anda akan memiliki item ini selamanya. Klik beli sekarang untuk merasakan hal-hal hebat.",
-    "upgrade_to_use_this_feature": "Fitur ini memerlukan peningkatan akun. Beli paket Premium untuk membuka dan menikmati pengalaman penuh!",
-    "not_enough_coin": "Anda tidak memiliki cukup koin",
-    "error_occurs": "Terjadi kesalahan. Silakan periksa koneksi Anda dan coba lagi nanti.",
-    "can_not_restore": "Kami tidak dapat memulihkan pembelian Anda. Silakan coba lagi.",
-    "login_reward_title": "Selamat! Anda telah menerima hadiah hari ini. Terus masuk untuk mendapatkan lebih banyak!",
-    "claim": "Klaim",
-    "rate_app_get_coin": "Beri aplikasi 5⭐ untuk langsung menerima koin bonus!",
-    "preview": "Pratinjau",
-    "sketch": "Sketsa",
-    "sketching": "Membuat sketsa",
-    "trace": "Menelusuri",
-    "save": "Simpan",
-    "opacity": "Opasitas",
-    "picture": "Gambar",
-    "Flashlight": "Senter",
-    "Flip": "Balik",
-    "excellent": "Luar biasa!",
-    "save_exit": "Simpan & Keluar",
-    "save_image_des": "Simpan sketsa yang telah selesai di bagian \"Profil\" untuk melacak kemajuan Anda",
-    "take_another_photo": "Ambil Foto Lagi",
-    "add_image_store_success": "Sketsa Anda berhasil ditambahkan.",
-    "update_image_store_success": "Sketsa Anda berhasil diperbarui.",
-    "sample": "Contoh",
-    "your_sketch": "Sketsa Anda",
-    "transparent": "Tanpa bingkai",
-    "with_background": "Asli",
-    "gallery": "Koleksi",
+    "show_all": "Tampilkan Semua",
+    "select_language_before_start": "Pilih bahasa sebelum mulai",
+    "scan_lable": "Pindai Label",
+    "scan_food": "Pindai Makanan",
+    "daily_intake": "Asupan Harian",
+    "to_get_started_scan_product": "Untuk memulai, pindai bagian depan produk atau pilih dari galeri!",
+    "scan_now": "Pindai Sekarang",
+    "gallery": "Galeri",
     "camera": "Kamera",
-    "tutorial": "Tutorial",
-    "tutorial_sketch_1": "1. Setelah memilih gambar favorit Anda, layar penelusuran akan menampilkan gambar di layar ponsel Anda.",
-    "tutorial_sketch_2": "2. Letakkan selembar kertas di layar dan mulai menggambar gambar tersebut.",
-    "tutorial_trace_1": "1. Setelah memilih gambar favorit Anda, layar penelusuran akan menampilkan gambar di layar ponsel Anda.",
-    "tutorial_trace_2": "2. Gunakan kertas transparan untuk menelusuri dan menggambar objek.",
-    "tutorial_trace_3": "3. Letakkan kertas transparan di atas layar ponsel dan mulai menelusuri objeknya.",
-    "video_tutorial": "Tutorial Video",
-    "save_image_success": "Gambar berhasil disimpan!",
-    "save_image_fail": "Gagal menyimpan gambar!",
-    "stroke_width": "Lebar garis",
-    "mirror_symmetry": "Simetri cermin",
-    "show_guidelines": "Tampilkan panduan",
-    "reset_brush_settings_to_default": "Atur ulang pengaturan kuas ke default",
-    "dash_length": "Panjang garis putus-putus",
-    "gap_length": "Panjang celah",
-    "glow_radius": "Radius cahaya",
-    "density": "Kepadatan",
-    "spread": "Sebaran",
-    "randomize_each_dot": "Acak setiap titik",
-    "glow_intensity": "Intensitas cahaya",
-    "blur_amount": "Tingkat blur",
-    "outer_glow_size": "Ukuran cahaya luar",
-    "inner_glow": "Cahaya dalam",
-    "rainbow_mode": "Mode pelangi",
-    "text": "Teks",
-    "font_size": "Ukuran font",
-    "word_spacing": "Jarak antar kata",
-    "letter_spacing": "Jarak antar huruf",
-    "random_rotation": "Rotasi acak",
-    "clear": "Bersihkan",
-    "clear_all": "Ini akan membersihkan semua gambar Anda. Apakah Anda yakin ingin melanjutkan?"
+    "now_capture_nutrition_label": "Sekarang ambil gambar label nutrisi",
+    "capture_or_select_nutrion_lable": "Silakan ambil atau pilih label fakta nutrisi produk",
+    "result": "Hasil",
+    "optimal_nutrients": "Nutrisi Optimal",
+    "watch_out": "Perhatian",
+    "recommendations": "Rekomendasi",
+    "serving_size": "Ukuran Porsi",
+    "how_much_did_you_consume": "Seberapa banyak yang Anda konsumsi?",
+    "edit_serving_size": "Edit Ukuran Porsi",
+    "enter_serving_size_in_grams": "Masukkan ukuran porsi dalam gram",
+    "serving_size_must_be_greater_than_0": "Ukuran porsi harus lebih besar dari 0",
+    "please_select_your_consumption": "Silakan pilih konsumsi Anda untuk melanjutkan",
+    "added_to_today_intake": "Ditambahkan ke asupan hari ini!",
+    "snap_a_picture_of_your_meal_or_pick_one_from_your_gallery": "Ambil foto makanan Anda atau pilih satu dari galeri Anda",
+    "take_photo": "Ambil Foto",
+    "analysis_results": "Hasil Analisis",
+    "total_nutrients": "Total Nutrisi",
+    "no_food_items_analyzed_yet": "Belum ada item makanan yang dianalisis",
+    "daily_nutrition": "Nutrisi Harian",
+    "today_intake": "Asupan Hari Ini",
+    "food_items_history": "Riwayat Item Makanan",
+    "this_section_show_all_food_item_you_have_comsume": "Bagian ini menunjukkan semua item makanan yang telah Anda konsumsi hari ini, beserta nilai kalori dan cap waktu mereka.",
+    "got_it": "Mengerti",
+    "detailed_nutrients": "Nutrisi Terperinci",
+    "chat_with_AI": "Chat dengan AI",
+    "welcome_message": "👋 Halo! Saya asisten nutrisi dan kesehatan Anda. Bagaimana saya bisa membantu Anda hari ini? 🍎",
+    "ask_AI": "Tanya AI",
+    "what_would_you_like_to_know_about": "👋 Halo, apa yang ingin Anda ketahui tentang",
+    "suggestions_1": "🍽️ Apakah makanan ini seimbang?",
+    "suggestions_2": "🍊 Apakah makanan ini kaya vitamin?",
+    "suggestions_3": "🏋️‍♂️ Apakah makanan ini baik untuk penurunan berat badan?",
+    "suggestions_4": "💪 Bagaimana makanan ini mendukung pertumbuhan otot?",
+    "suggestions_5": "🌟 Apa manfaat kesehatan dari makanan ini?",
+    "no_results_found": "Tidak ada hasil ditemukan!",
+    "add_food_item": "Tambahkan item makanan",
+    "suggession_widget_1": "Nutrisi apa yang terkandung dalam makanan ini?",
+    "suggession_widget_2": "Apakah makanan ini sehat untuk saya?",
+    "suggession_widget_3": "Berapa banyak kalori dalam porsi ini?",
+    "suggession_widget_4": "Apa saja manfaat kesehatan?",
+    "suggession_widget_5": "Apakah ada alergen yang perlu saya ketahui?",
+    "user_information": "Informasi Pengguna",
+    "your_name": "Nama Anda",
+    "enter_your_name": "Masukkan nama Anda",
+    "gender": "Jenis kelamin",
+    "male": "Laki-laki",
+    "female": "Perempuan",
+    "age": "Usia",
+    "height": "Tinggi",
+    "weight": "Berat",
+    "daily_target": "Target Harian",
+    "energy": "Energi",
+    "calories": "Kalori",
+    "protein": "Protein",
+    "carbohydrate": "Karbohidrat",
+    "carbohydrates": "Karbohidrat",
+    "fat": "Lemak",
+    "fiber": "Serat"
 }
