--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -1,263 +1,106 @@
 {
-    "fingerprint_scan": "指紋スキャン",
-    "vietnamese": "ベトナム語",
-    "english": "英語",
-    "japanese": "日本語",
-    "spanish": "スペイン語",
-    "korean": "韓国語",
-    "hindi": "ヒンディー語",
-    "indonesian": "インドネシア語",
-    "onboarding_1": "シンプルな描画ツールを使って、フレームごとのスムーズなアニメーションを作成します。",
-    "onboarding_2": "アイデアを描画して、動きに変換します。",
-    "onboarding_3": "あなたの創造性を探り、以前よりももっとアートを生き生きとさせます。",
-    "onboarding_4": "アニメーションを簡単に保存し、今すぐクリエイティブな世界に飛び込みましょう！",
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "japanese": "Japanese",
+    "spanish": "Spanish",
+    "korean": "Korean",
+    "hindi": "Hindi",
+    "indonesian": "Indonesia",
+    "onboarding_1": "あなたの食習慣をよりよく理解するお手伝いをします",
+    "onboarding_1_des": "詳細な栄養分析により、毎日の食事の質を追跡し、持続可能な食事ルーチンを構築します。",
+    "onboarding_2": "食事の栄養素の量を分析し表示",
+    "onboarding_2_des": "各食事の詳細な栄養 breakdown を取得し、マクロ栄養素とミクロ栄養素の正確な量を含めます。",
+    "onboarding_3": "ポーションと栄養を管理しましょう。",
+    "onboarding_3_des": "簡単にポーションサイズを監視し、毎日の栄養摂取をコントロールします。",
     "continue": "続ける",
     "language": "言語",
-    "no_internet": "インターネット接続なし",
+    "no_internet": "インターネットなし",
     "please_check_your_connection": "接続を確認してください",
-    "try_again": "再試行",
+    "try_again": "もう一度試す",
     "get_started": "始める",
     "next": "次へ",
     "cancel": "キャンセル",
-    "accept": "承諾する",
+    "accept": "受け入れる",
     "allow": "許可する",
     "setting": "設定",
     "rating_5_stars": "5つ星評価",
     "feedback": "フィードバック",
-    "share_app": "アプリをシェア",
-    "share": "シェア",
-    "create_more": "もっと作成",
+    "share_app": "アプリを共有",
+    "share": "共有",
     "privacy_policy": "プライバシーポリシー",
     "rate_app": "アプリを評価",
-    "rate_app_content": "より良いユーザー体験のために尽力しています。",
-    "rate_app_subcontent": "評価していただけると非常にありがたいです。",
+    "rate_app_content": "より良いユーザー体験のために努力しています。",
+    "rate_app_subcontent": "評価していただけると大変嬉しいです。",
     "rate_us": "評価してください",
-    "exit_content": "本当にアプリを終了しますか？",
+    "exit_content": "アプリを終了してもよろしいですか？",
     "exit": "終了",
-    "stay": "とどまる",
+    "stay": "滞在",
     "retry": "再試行",
     "check_your_connection": "接続を確認してください",
     "show_all": "すべて表示",
-    "pages": "ページ",
-    "project_name": "プロジェクト名",
-    "frame_rate": "フレームレート",
-    "background": "背景",
-    "format": "フォーマット",
-    "ratio": "比率",
-    "select_background": "背景を選択",
-    "play_animation": "アニメーションを再生",
-    "pause_animation": "アニメーションを一時停止",
-    "export": "エクスポート",
-    "exit_title": "終了しますか？",
-    "exit_subtitle": "プロジェクトを作成しています",
-    "frames": "フレーム",
-    "template": "テンプレート",
-    "project": "プロジェクト",
-    "vip_template_message": "無制限のドローアニメーションアプリにアップグレード！",
-    "vip_template_title": "プレミアムテンプレートを無料でアンロック！",
-    "watch_video": "ビデオを見る",
-    "cat_walk": "Cat Walk",
-    "duck_run": "Duck Run",
-    "chicken_rooster": "Chicken Rooster",
-    "stickman_run": "Stickman Run",
-    "stickman_ninja": "Stickman Ninja",
-    "stickman_jump": "Stickman Jump",
-    "star": "Star",
-    "shark": "Shark",
-    "eating": "Eating",
-    "cute_dance": "Cute Dance",
-    "cool_chicken": "Cool Chicken",
-    "cute_kitten": "Cute Kitten",
-    "funny_man": "Funny Man",
-    "falling_ghost": "Falling Ghost",
-    "run": "Run",
-    "robot": "Robot",
-    "ship": "Ship",
-    "ufo": "UFO",
-    "rocket_fly": "Rocket Fly",
-    "spinning_bear": "Spinning Bear",
-    "cute_pig": "Cute Pig",
-    "stickman_with_sword": "Stickman With Sword",
-    "bonk": "Bonk",
-    "seal_witch": "Seal Witch",
-    "cute_ghost": "Cute Ghost",
-    "cat_pumpkin": "Cat Pumpkin",
-    "duck_love": "Duck Love",
-    "cool_smile": "Cool Smile",
-    "waving_boy": "Waving Boy",
-    "pinky_girl": "Pinky Girl",
-    "girl_with_glasses": "Girl With Glasses",
-    "angry_egg": "Angry Egg",
-    "bunny_cat": "Bunny Cat",
-    "cute_dog": "Cute Dog",
-    "computer_stick_man": "Computer Stick Man",
-    "dance_frog": "Dance Frog",
-    "deadpan_rabbit_look": "Deadpan Rabbit Look",
-    "egg_shining": "Egg Shining",
-    "fatty_bird": "Fatty Bird",
-    "funny_rabbit": "Funny Rabbit",
-    "ghost_popcorn": "Ghost Popcorn",
-    "giraffe_angry": "Giraffe Angry",
-    "giraffe_smart": "Giraffe Smart",
-    "i_dont_know": "I Don't Know",
-    "i_see_you": "I See You",
-    "lightsaber_stickman": "Lightsaber Stickman",
-    "like": "Like",
-    "love_explosion": "Love Explosion",
-    "oh_stick_man": "Oh Stick Man",
-    "super_bongo": "Super Bongo",
-    "spooked_ghost": "Spooked Ghost",
-    "thoughtful_boy": "Thoughtful Boy",
-    "blance": "Blance",
-    "bling": "Bling",
-    "bounce": "Bounce",
-    "bus": "Bus",
-    "car": "Car",
-    "cherry_bloom": "Cherry Bloom",
-    "coffee_ghost": "Coffee Ghost",
-    "dog_working": "Dog Working",
-    "drink": "Drink",
-    "duck_knife": "Duck Knife",
-    "easter": "Easter",
-    "exclamation": "Exclamation",
-    "fire": "Fire",
-    "fish": "Fish",
-    "flying_bird": "Flying Bird",
-    "football": "Football",
-    "heart_baloon": "Heart Baloon",
-    "hero_pixel": "Hero Pixel",
-    "hiccup_frog": "Hiccup Frog",
-    "laughing": "Laughing",
-    "lovely_eye": "Lovely Eye",
-    "panda_pull": "Panda Pull",
-    "peek_cat": "Peek Cat",
-    "question": "Question",
-    "sad": "Sad",
-    "smile": "Smile",
-    "smile_rabbit": "Smile Rabbit",
-    "squishy_cat": "Squishy Cat",
-    "thumb_up": "Thumb Up",
-    "eco_green_car": "Eco Green Car",
-    "face_emoji": "Face Emoji",
-    "fat_dragon": "Fat Dragon",
-    "flying_dog": "Flying Dog",
-    "heart": "Heart",
-    "jumping_cat": "Jumping Cat",
-    "loving_box": "Loving Box",
-    "moving_eye": "Moving Eye",
-    "playful_cat": "Playful Cat",
-    "surprise_ghost": "Surprise Ghost",
-    "walking_ghost": "Walking Ghost",
-    "bloom_flower": "Bloom Flower",
-    "dancing_chick": "Dancing Chick",
-    "dog_wag": "Dog Wag",
-    "dreamy_pup": "Dreamy Pup",
-    "fast_kick": "Fast Kick",
-    "fast_run": "Fast Run",
-    "forward_flip": "Forward Flip",
-    "galaxy_run": "Galaxy Run",
-    "happy_tiger": "Happy Tiger",
-    "hurdle_jump": "Hurdle Jump",
-    "magic_square": "Magic Square",
-    "motor_spin": "Motor Spin",
-    "pink_panther": "Pink Panther",
-    "road_trip": "Road Trip",
-    "rocket_flight": "Rocket Flight",
-    "starship": "Starship",
-    "turbo_bike": "Turbo Bike",
-    "van_drive": "Van Drive",
-    "volleyball_spin": "Volleyball Spin",
-    "wow": "Wow",
-    "empty": "空",
-    "empty_subtitle": "アニメーションがありません",
-    "create_your_own_project": "自分のプロジェクトを作成",
-    "you_can_see_all_template_here": "ここで全てのテンプレートを見ることができます",
-    "project_create_here": "ここで作成したプロジェクト！",
-    "draw_something": "何かを描いてください",
-    "if_the_feature": "支払い後に機能がアンロックされない場合は、 ",
-    "store_restore": "ストア > 復元",
-    "or": "または",
-    "click_the": "下記の復元ボタンをクリックしてください。",
-    "these_purchases": "これらの購入",
-    "auto_renewable_subscriptions": "自動更新型サブスクリプション",
-    "subscription_is": "サブスクリプションは現在の期間終了の24時間前にキャンセルしない限り更新されます。",
-    "cancel_subscription_at": "いつでもサブスクリプションをキャンセルできます",
-    "through_your": "Google Playアカウントを通じて：",
-    "google_play": "Google Playのサブスクリプションセンター",
-    "alert_1": "支払いは確認後、Googleアカウントに請求されます。サブスクリプションは現在の期間終了の24時間前にキャンセルしない限り更新されます。",
-    "account_settings": "アカウント設定",
-    "any_unused": "無料期間中の未使用部分は、ユーザーがサブスクリプションを購入した時点で失われます。",
-    "privacy": "プライバシーポリシー",
-    "and": "そして",
-    "terms_of_service": "利用規約",
-    "restore": "復元",
-    "upgrade_preminum": "プレミアムにアップグレード",
-    "auto_renew_monthly": "自動更新サブスクリプション（月額請求）",
-    "monthly": "月額",
-    "unlook_your_draw_animation_feature": "アニメーション機能をアンロックし、すべてのプレミアム機能をゲット",
-    "lifetime_access": "永久アクセス",
-    "iap_feature_1": "すべての編集機能にアクセス",
-    "iap_feature_2": "すべてのかわいいアイコンをアンロックしよう",
-    "iap_feature_3": "テンプレートをアンロックするために追加のコインを獲得",
-    "buy_now": "今すぐ購入",
-    "buy_template_title": "このアイテムを永久に所有できます。素晴らしい体験をするために「今すぐ購入」をクリックしてください。",
-    "upgrade_to_use_this_feature": "この機能を使用するにはアカウントのアップグレードが必要です。プレミアムパッケージを購入して、完全な体験をお楽しみください！",
-    "not_enough_coin": "コインが不足しています",
-    "error_occurs": "エラーが発生しました。接続を確認して、後でもう一度お試しください。",
-    "can_not_restore": "購入を復元できません。もう一度お試しください。",
-    "login_reward_title": "おめでとうございます！ 今日の報酬を受け取りました。 ログインを続けてさらに獲得しましょう！",
-    "claim": "受け取る",
-    "rate_app_get_coin": "アプリを5⭐で評価して、すぐにボーナスコインをゲットしましょう！",
-    "preview": "プレビュー",
-    "sketch": "スケッチ",
-    "sketching": "スケッチ中",
-    "trace": "トレース",
-    "save": "保存",
-    "opacity": "不透明度",
-    "picture": "画像",
-    "Flashlight": "懐中電灯",
-    "Flip": "反転",
-    "excellent": "素晴らしい！",
-    "save_exit": "保存して終了",
-    "save_image_des": "完成したスケッチを「プロフィール」セクションに保存して、進捗を追跡しましょう",
-    "take_another_photo": "別の写真を撮る",
-    "add_image_store_success": "スケッチが正常に追加されました。",
-    "update_image_store_success": "スケッチが正常に更新されました。",
-    "sample": "サンプル",
-    "your_sketch": "あなたのスケッチ",
-    "transparent": "枠なし",
-    "with_background": "オリジナル",
-    "gallery": "コレクション",
+    "select_language_before_start": "開始前に言語を選択してください",
+    "scan_lable": "ラベルをスキャン",
+    "scan_food": "食品をスキャン",
+    "daily_intake": "デイリー摂取",
+    "to_get_started_scan_product": "始めるには、製品の前面をスキャンするか、ギャラリーから選択してください！",
+    "scan_now": "今すぐスキャン",
+    "gallery": "ギャラリー",
     "camera": "カメラ",
-    "tutorial": "チュートリアル",
-    "tutorial_sketch_1": "1. お気に入りの画像を選択すると、トレース画面に描画が表示されます。",
-    "tutorial_sketch_2": "2. 画面に紙を置いて、画像を描き始めます。",
-    "tutorial_trace_1": "1. お気に入りの画像を選択すると、トレース画面に描画が表示されます。",
-    "tutorial_trace_2": "2. トレーシングペーパーを使って、オブジェクトをトレースして描画します。",
-    "tutorial_trace_3": "3. スマホの画面の上にトレーシングペーパーを置き、オブジェクトをなぞります。",
-    "video_tutorial": "ビデオチュートリアル",
-    "save_image_success": "画像が正常に保存されました！",
-    "save_image_fail": "画像の保存に失敗しました！",
-    "stroke_width": "ストロークの幅",
-    "mirror_symmetry": "ミラー対称",
-    "show_guidelines": "ガイドラインを表示",
-    "reset_brush_settings_to_default": "ブラシ設定をデフォルトにリセット",
-    "dash_length": "破線の長さ",
-    "gap_length": "間隔の長さ",
-    "glow_radius": "光の半径",
-    "density": "密度",
-    "spread": "広がり",
-    "randomize_each_dot": "各ドットをランダム化",
-    "glow_intensity": "光の強さ",
-    "blur_amount": "ぼかし量",
-    "outer_glow_size": "外側の光のサイズ",
-    "inner_glow": "内側の光",
-    "rainbow_mode": "レインボーモード",
-    "text": "テキスト",
-    "font_size": "フォントサイズ",
-    "word_spacing": "単語の間隔",
-    "letter_spacing": "文字の間隔",
-    "random_rotation": "ランダム回転",
-    "clear": "クリア",
-    "clear_all": "これによりすべての描画がクリアされます。続行してもよろしいですか？"
+    "now_capture_nutrition_label": "栄養ラベルをキャプチャ",
+    "capture_or_select_nutrion_lable": "製品の栄養成分表示をキャプチャまたは選択してください",
+    "result": "結果",
+    "optimal_nutrients": "最適な栄養素",
+    "watch_out": "注意",
+    "recommendations": "推奨事項",
+    "serving_size": "サービングサイズ",
+    "how_much_did_you_consume": "どれだけ消費しましたか？",
+    "edit_serving_size": "サービングサイズを編集",
+    "enter_serving_size_in_grams": "グラム単位でサービングサイズを入力してください",
+    "serving_size_must_be_greater_than_0": "サービングサイズは0より大きくなければなりません",
+    "please_select_your_consumption": "続行するには消費量を選択してください",
+    "added_to_today_intake": "今日の摂取に追加されました！",
+    "snap_a_picture_of_your_meal_or_pick_one_from_your_gallery": "食事の写真を撮るか、ギャラリーから選択してください",
+    "take_photo": "写真を撮る",
+    "analysis_results": "分析結果",
+    "total_nutrients": "総栄養素",
+    "no_food_items_analyzed_yet": "まだ分析された食品アイテムはありません",
+    "daily_nutrition": "デイリーニュートリション",
+    "today_intake": "今日の摂取",
+    "food_items_history": "食品アイテムの履歴",
+    "this_section_show_all_food_item_you_have_comsume": "このセクションは、今日消費したすべての食品アイテムとそのカロリー値、タイムスタンプを表示します。",
+    "got_it": "了解",
+    "detailed_nutrients": "詳細な栄養素",
+    "chat_with_AI": "AIとチャット",
+    "welcome_message": "👋 こんにちは！私はあなたの栄養と健康のアシスタントです。今日はどのようにお手伝いできますか？ 🍎",
+    "ask_AI": "AIに聞く",
+    "what_would_you_like_to_know_about": "👋 こんにちは、何について知りたいですか",
+    "suggestions_1": "🍽️ この食事はバランスが取れていますか？",
+    "suggestions_2": "🍊 この食事はビタミンが豊富ですか？",
+    "suggestions_3": "🏋️‍♂️ この食事は減量に良いですか？",
+    "suggestions_4": "💪 この食事は筋肉の成長をどうサポートしますか？",
+    "suggestions_5": "🌟 この食事の健康上の利点は何ですか？",
+    "no_results_found": "結果が見つかりませんでした！",
+    "add_food_item": "食品アイテムを追加",
+    "suggession_widget_1": "この食品にはどんな栄養素が含まれていますか？",
+    "suggession_widget_2": "この食品は私にとって健康的ですか？",
+    "suggession_widget_3": "このサービングには何カロリーありますか？",
+    "suggession_widget_4": "健康上の利点は何ですか？",
+    "suggession_widget_5": "知っておくべきアレルゲンはありますか？",
+    "user_information": "ユーザー情報",
+    "your_name": "あなたの名前",
+    "enter_your_name": "名前を入力してください",
+    "gender": "性別",
+    "male": "男性",
+    "female": "女性",
+    "age": "年齢",
+    "height": "身長",
+    "weight": "体重",
+    "daily_target": "日々の目標",
+    "energy": "エネルギー",
+    "calories": "カロリー",
+    "protein": "タンパク質",
+    "carbohydrate": "炭水化物",
+    "carbohydrates": "炭水化物",
+    "fat": "脂肪",
+    "fiber": "繊維"
 }
