--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -1,263 +1,106 @@
 {
-    "fingerprint_scan": "지문 스캔",
-    "vietnamese": "베트남어",
-    "english": "영어",
-    "japanese": "일본어",
-    "spanish": "스페인어",
-    "korean": "한국어",
-    "hindi": "힌디어",
-    "indonesian": "인도네시아어",
-    "onboarding_1": "간단한 그림 도구를 사용하여 프레임별 부드러운 애니메이션을 만듭니다.",
-    "onboarding_2": "아이디어를 그려서 움직임으로 변환하세요.",
-    "onboarding_3": "창의력을 탐구하고 그 어느 때보다 생동감 있게 예술을 만들어 보세요.",
-    "onboarding_4": "애니메이션을 쉽게 저장하고 지금 바로 창의적인 세계로 뛰어들어 보세요!",
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "japanese": "Japanese",
+    "spanish": "Spanish",
+    "korean": "Korean",
+    "hindi": "Hindi",
+    "indonesian": "Indonesia",
+    "onboarding_1": "당신의 식습관을 더 잘 이해하도록 도와드립니다",
+    "onboarding_1_des": "심층 영양 분석을 통해 매일 식사의 질을 추적하고 지속 가능한 식사 루틴을 구축하세요.",
+    "onboarding_2": "식사의 영양소 양을 분석하고 표시하세요",
+    "onboarding_2_des": "각 식사의 세부 영양 분해를 얻고, 정확한 매크로 및 마이크로 영양소 양을 포함하세요.",
+    "onboarding_3": "당신의 포션과 영양을 관리하세요.",
+    "onboarding_3_des": "포션 크기를 쉽게 모니터링하고 매일의 영양 섭취를 통제하세요.",
     "continue": "계속",
     "language": "언어",
-    "no_internet": "인터넷 연결 없음",
+    "no_internet": "인터넷 없음",
     "please_check_your_connection": "연결을 확인하세요",
     "try_again": "다시 시도",
     "get_started": "시작하기",
     "next": "다음",
     "cancel": "취소",
-    "accept": "동의",
+    "accept": "수락",
     "allow": "허용",
     "setting": "설정",
     "rating_5_stars": "5성급 평가",
     "feedback": "피드백",
     "share_app": "앱 공유",
     "share": "공유",
-    "create_more": "더 만들기",
-    "privacy_policy": "개인정보 보호정책",
+    "privacy_policy": "개인정보 처리방침",
     "rate_app": "앱 평가",
-    "rate_app_content": "더 나은 사용자 경험을 위해 노력하고 있습니다.",
-    "rate_app_subcontent": "평가해주시면 정말 감사하겠습니다.",
+    "rate_app_content": "더 나은 사용자 경험을 위해 열심히 일하고 있습니다.",
+    "rate_app_subcontent": "평가해 주시면 대단히 감사하겠습니다.",
     "rate_us": "평가해 주세요",
-    "exit_content": "정말로 앱을 종료하시겠습니까?",
+    "exit_content": "정말로 애플리케이션을 종료하시겠습니까?",
     "exit": "종료",
-    "stay": "유지",
-    "retry": "다시 시도",
+    "stay": "머물기",
+    "retry": "재시도",
     "check_your_connection": "연결을 확인하세요",
     "show_all": "모두 보기",
-    "pages": "페이지",
-    "project_name": "프로젝트 이름",
-    "frame_rate": "프레임 속도",
-    "background": "배경",
-    "format": "형식",
-    "ratio": "비율",
-    "select_background": "배경 선택",
-    "play_animation": "애니메이션 재생",
-    "pause_animation": "애니메이션 일시 정지",
-    "export": "내보내기",
-    "exit_title": "정말로 종료하시겠습니까?",
-    "exit_subtitle": "프로젝트를 만들고 있습니다",
-    "frames": "프레임",
-    "template": "템플릿",
-    "project": "프로젝트",
-    "vip_template_message": "무제한 드로우 애니메이션 앱으로 업그레이드!",
-    "vip_template_title": "프리미엄 템플릿을 무료로 잠금 해제!",
-    "watch_video": "비디오 보기",
-    "cat_walk": "Cat Walk",
-    "duck_run": "Duck Run",
-    "chicken_rooster": "Chicken Rooster",
-    "stickman_run": "Stickman Run",
-    "stickman_ninja": "Stickman Ninja",
-    "stickman_jump": "Stickman Jump",
-    "star": "Star",
-    "shark": "Shark",
-    "eating": "Eating",
-    "cute_dance": "Cute Dance",
-    "cool_chicken": "Cool Chicken",
-    "cute_kitten": "Cute Kitten",
-    "funny_man": "Funny Man",
-    "falling_ghost": "Falling Ghost",
-    "run": "Run",
-    "robot": "Robot",
-    "ship": "Ship",
-    "ufo": "UFO",
-    "rocket_fly": "Rocket Fly",
-    "spinning_bear": "Spinning Bear",
-    "cute_pig": "Cute Pig",
-    "stickman_with_sword": "Stickman With Sword",
-    "bonk": "Bonk",
-    "seal_witch": "Seal Witch",
-    "cute_ghost": "Cute Ghost",
-    "cat_pumpkin": "Cat Pumpkin",
-    "duck_love": "Duck Love",
-    "cool_smile": "Cool Smile",
-    "waving_boy": "Waving Boy",
-    "pinky_girl": "Pinky Girl",
-    "girl_with_glasses": "Girl With Glasses",
-    "angry_egg": "Angry Egg",
-    "bunny_cat": "Bunny Cat",
-    "cute_dog": "Cute Dog",
-    "computer_stick_man": "Computer Stick Man",
-    "dance_frog": "Dance Frog",
-    "deadpan_rabbit_look": "Deadpan Rabbit Look",
-    "egg_shining": "Egg Shining",
-    "fatty_bird": "Fatty Bird",
-    "funny_rabbit": "Funny Rabbit",
-    "ghost_popcorn": "Ghost Popcorn",
-    "giraffe_angry": "Giraffe Angry",
-    "giraffe_smart": "Giraffe Smart",
-    "i_dont_know": "I Don't Know",
-    "i_see_you": "I See You",
-    "lightsaber_stickman": "Lightsaber Stickman",
-    "like": "Like",
-    "love_explosion": "Love Explosion",
-    "oh_stick_man": "Oh Stick Man",
-    "super_bongo": "Super Bongo",
-    "spooked_ghost": "Spooked Ghost",
-    "thoughtful_boy": "Thoughtful Boy",
-    "blance": "Blance",
-    "bling": "Bling",
-    "bounce": "Bounce",
-    "bus": "Bus",
-    "car": "Car",
-    "cherry_bloom": "Cherry Bloom",
-    "coffee_ghost": "Coffee Ghost",
-    "dog_working": "Dog Working",
-    "drink": "Drink",
-    "duck_knife": "Duck Knife",
-    "easter": "Easter",
-    "exclamation": "Exclamation",
-    "fire": "Fire",
-    "fish": "Fish",
-    "flying_bird": "Flying Bird",
-    "football": "Football",
-    "heart_baloon": "Heart Baloon",
-    "hero_pixel": "Hero Pixel",
-    "hiccup_frog": "Hiccup Frog",
-    "laughing": "Laughing",
-    "lovely_eye": "Lovely Eye",
-    "panda_pull": "Panda Pull",
-    "peek_cat": "Peek Cat",
-    "question": "Question",
-    "sad": "Sad",
-    "smile": "Smile",
-    "smile_rabbit": "Smile Rabbit",
-    "squishy_cat": "Squishy Cat",
-    "thumb_up": "Thumb Up",
-    "eco_green_car": "Eco Green Car",
-    "face_emoji": "Face Emoji",
-    "fat_dragon": "Fat Dragon",
-    "flying_dog": "Flying Dog",
-    "heart": "Heart",
-    "jumping_cat": "Jumping Cat",
-    "loving_box": "Loving Box",
-    "moving_eye": "Moving Eye",
-    "playful_cat": "Playful Cat",
-    "surprise_ghost": "Surprise Ghost",
-    "walking_ghost": "Walking Ghost",
-    "bloom_flower": "Bloom Flower",
-    "dancing_chick": "Dancing Chick",
-    "dog_wag": "Dog Wag",
-    "dreamy_pup": "Dreamy Pup",
-    "fast_kick": "Fast Kick",
-    "fast_run": "Fast Run",
-    "forward_flip": "Forward Flip",
-    "galaxy_run": "Galaxy Run",
-    "happy_tiger": "Happy Tiger",
-    "hurdle_jump": "Hurdle Jump",
-    "magic_square": "Magic Square",
-    "motor_spin": "Motor Spin",
-    "pink_panther": "Pink Panther",
-    "road_trip": "Road Trip",
-    "rocket_flight": "Rocket Flight",
-    "starship": "Starship",
-    "turbo_bike": "Turbo Bike",
-    "van_drive": "Van Drive",
-    "volleyball_spin": "Volleyball Spin",
-    "wow": "Wow",
-    "empty": "비어 있음",
-    "empty_subtitle": "애니메이션이 없습니다",
-    "create_your_own_project": "자신의 프로젝트 만들기",
-    "you_can_see_all_template_here": "여기에서 모든 템플릿을 볼 수 있습니다",
-    "project_create_here": "여기에서 만든 프로젝트!",
-    "draw_something": "무언가 그려보세요",
-    "if_the_feature": "지불 후 기능이 열리지 않으면, ",
-    "store_restore": "스토어 > 복원",
-    "or": "또는",
-    "click_the": "아래 복원 버튼을 클릭하세요.",
-    "these_purchases": "이 구매 항목들",
-    "auto_renewable_subscriptions": "자동 갱신 구독",
-    "subscription_is": "구독은 현재 기간 종료 24시간 전까지 취소하지 않으면 갱신됩니다.",
-    "cancel_subscription_at": "언제든지 구독을 취소할 수 있습니다",
-    "through_your": "Google Play 계정을 통해:",
-    "google_play": "Google Play 구독 센터",
-    "alert_1": "결제는 확인 후 Google 계정에 청구됩니다. 구독은 현재 기간 종료 24시간 전까지 취소하지 않으면 갱신됩니다.",
-    "account_settings": "계정 설정",
-    "any_unused": "무료 기간 중 사용되지 않은 부분은, 사용자가 구독을 구매할 때 소멸됩니다.",
-    "privacy": "개인정보 보호정책",
-    "and": "그리고",
-    "terms_of_service": "서비스 약관",
-    "restore": "복원",
-    "upgrade_preminum": "프리미엄 업그레이드",
-    "auto_renew_monthly": "자동 갱신 구독, 월별 청구",
-    "monthly": "월간",
-    "unlook_your_draw_animation_feature": "드로우 애니메이션 기능을 잠금 해제하고 모든 프리미엄 기능을 이용하세요",
-    "lifetime_access": "평생 액세스",
-    "iap_feature_1": "모든 편집 기능에 액세스",
-    "iap_feature_2": "모든 귀여운 아이콘을 잠금 해제하세요",
-    "iap_feature_3": "템플릿 잠금 해제를 위한 추가 코인 받기",
-    "buy_now": "지금 구매",
-    "buy_template_title": "이 항목은 영원히 소유하게 됩니다. 멋진 경험을 위해 지금 구매를 클릭하세요.",
-    "upgrade_to_use_this_feature": "이 기능을 사용하려면 계정을 업그레이드해야 합니다. 프리미엄 패키지를 구매하여 모든 기능을 잠금 해제하고 완전한 경험을 즐기세요!",
-    "not_enough_coin": "코인이 부족합니다",
-    "error_occurs": "오류가 발생했습니다. 연결을 확인하고 나중에 다시 시도하세요.",
-    "can_not_restore": "구매를 복원할 수 없습니다. 다시 시도해 주세요.",
-    "login_reward_title": "축하합니다! 오늘의 보상을 받으셨습니다. 더 많은 보상을 위해 계속 로그인하세요!",
-    "claim": "받기",
-    "rate_app_get_coin": "앱을 5⭐로 평가하고 보너스 코인을 즉시 받으세요!",
-    "preview": "미리보기",
-    "sketch": "스케치",
-    "sketching": "스케치 중",
-    "trace": "따라 그리기",
-    "save": "저장",
-    "opacity": "투명도",
-    "picture": "사진",
-    "Flashlight": "손전등",
-    "Flip": "뒤집기",
-    "excellent": "훌륭해요!",
-    "save_exit": "저장 후 종료",
-    "save_image_des": "완성된 스케치를 \"프로필\" 섹션에 저장하여 진행 상황을 추적하세요.",
-    "take_another_photo": "다른 사진 촬영",
-    "add_image_store_success": "스케치가 성공적으로 추가되었습니다.",
-    "update_image_store_success": "스케치가 성공적으로 업데이트되었습니다.",
-    "sample": "샘플",
-    "your_sketch": "내 스케치",
-    "transparent": "프레임 없음",
-    "with_background": "원본",
+    "select_language_before_start": "시작 전에 언어를 선택하세요",
+    "scan_lable": "라벨 스캔",
+    "scan_food": "음식 스캔",
+    "daily_intake": "일일 섭취량",
+    "to_get_started_scan_product": "시작하려면 제품의 앞면을 스캔하거나 갤러리에서 선택하세요!",
+    "scan_now": "지금 스캔",
     "gallery": "갤러리",
     "camera": "카메라",
-    "tutorial": "튜토리얼",
-    "tutorial_sketch_1": "1. 원하는 이미지를 선택하면, 따라 그리기 화면에 그림이 표시됩니다.",
-    "tutorial_sketch_2": "2. 화면 위에 종이를 놓고 그림을 따라 그리세요.",
-    "tutorial_trace_1": "1. 원하는 이미지를 선택하면, 따라 그리기 화면에 그림이 표시됩니다.",
-    "tutorial_trace_2": "2. 트레이싱지를 사용하여 그림을 따라 그리세요.",
-    "tutorial_trace_3": "3. 모바일 화면 위에 트레이싱지를 놓고 따라 그리기를 시작하세요.",
-    "video_tutorial": "비디오 튜토리얼",
-    "save_image_success": "이미지가 성공적으로 저장되었습니다!",
-    "save_image_fail": "이미지 저장 실패!",
-    "stroke_width": "스트로크 너비",
-    "mirror_symmetry": "미러 대칭",
-    "show_guidelines": "가이드라인 표시",
-    "reset_brush_settings_to_default": "브러시 설정을 기본값으로 재설정",
-    "dash_length": "대시 길이",
-    "gap_length": "간격 길이",
-    "glow_radius": "광선 반경",
-    "density": "밀도",
-    "spread": "퍼짐",
-    "randomize_each_dot": "각 점 무작위화",
-    "glow_intensity": "광선 강도",
-    "blur_amount": "블러 양",
-    "outer_glow_size": "외부 광선 크기",
-    "inner_glow": "내부 광선",
-    "rainbow_mode": "무지개 모드",
-    "text": "텍스트",
-    "font_size": "글꼴 크기",
-    "word_spacing": "단어 간격",
-    "letter_spacing": "문자 간격",
-    "random_rotation": "무작위 회전",
-    "clear": "지우기",
-    "clear_all": "이 작업은 모든 그림을 지웁니다. 계속하시겠습니까?"
+    "now_capture_nutrition_label": "지금 영양 라벨을 캡처하세요",
+    "capture_or_select_nutrion_lable": "제품의 영양 사실 레이블을 캡처하거나 선택하세요",
+    "result": "결과",
+    "optimal_nutrients": "최적의 영양소",
+    "watch_out": "주의",
+    "recommendations": "추천 사항",
+    "serving_size": "서빙 크기",
+    "how_much_did_you_consume": "얼마나 소비하셨나요?",
+    "edit_serving_size": "서빙 크기 편집",
+    "enter_serving_size_in_grams": "그램 단위로 서빙 크기를 입력하세요",
+    "serving_size_must_be_greater_than_0": "서빙 크기는 0보다 커야 합니다",
+    "please_select_your_consumption": "계속하려면 소비량을 선택하세요",
+    "added_to_today_intake": "오늘의 섭취량에 추가되었습니다!",
+    "snap_a_picture_of_your_meal_or_pick_one_from_your_gallery": "식사의 사진을 찍거나 갤러리에서 선택하세요",
+    "take_photo": "사진 찍기",
+    "analysis_results": "분석 결과",
+    "total_nutrients": "총 영양소",
+    "no_food_items_analyzed_yet": "아직 분석된 음식 항목이 없습니다",
+    "daily_nutrition": "일일 영양",
+    "today_intake": "오늘의 섭취",
+    "food_items_history": "음식 항목 기록",
+    "this_section_show_all_food_item_you_have_comsume": "이 섹션은 오늘 소비한 모든 음식 항목과 그 칼로리 값 및 타임스탬프를 보여줍니다.",
+    "got_it": "알겠습니다",
+    "detailed_nutrients": "상세 영양소",
+    "chat_with_AI": "AI와 채팅",
+    "welcome_message": "👋 안녕하세요! 저는 당신의 영양 및 건강 도우미입니다. 오늘 어떻게 도와드릴까요? 🍎",
+    "ask_AI": "AI에게 물어보기",
+    "what_would_you_like_to_know_about": "👋 안녕하세요, 무엇에 대해 알고 싶으신가요",
+    "suggestions_1": "🍽️ 이 식사는 균형이 잡혀 있나요?",
+    "suggestions_2": "🍊 이 식사는 비타민이 풍부한가요?",
+    "suggestions_3": "🏋️‍♂️ 이 식사는 체중 감소에 좋은가요?",
+    "suggestions_4": "💪 이 식사는 근육 성장에 어떻게 도움이 되나요?",
+    "suggestions_5": "🌟 이 식사의 건강 혜택은 무엇인가요?",
+    "no_results_found": "결과를 찾을 수 없습니다!",
+    "add_food_item": "음식 항목 추가",
+    "suggession_widget_1": "이 음식에는 어떤 영양소가 포함되어 있나요?",
+    "suggession_widget_2": "이 음식은 저에게 건강한가요?",
+    "suggession_widget_3": "이 서빙에는 몇 칼로리가 있나요?",
+    "suggession_widget_4": "건강상의 이점은 무엇인가요?",
+    "suggession_widget_5": "제가 알아야 할 알레르겐이 있나요?",
+    "user_information": "사용자 정보",
+    "your_name": "당신의 이름",
+    "enter_your_name": "이름을 입력하세요",
+    "gender": "성별",
+    "male": "남성",
+    "female": "여성",
+    "age": "나이",
+    "height": "신장",
+    "weight": "체중",
+    "daily_target": "일일 목표",
+    "energy": "에너지",
+    "calories": "칼로리",
+    "protein": "단백질",
+    "carbohydrate": "탄수화물",
+    "carbohydrates": "탄수화물",
+    "fat": "지방",
+    "fiber": "섬유"
 }
