--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -1,19 +1,20 @@
 {
-    "fingerprint_scan": "Quét vân tay",
-    "vietnamese": "Tiếng Việt",
-    "english": "Tiếng Anh",
-    "japanese": "Tiếng Nhật",
-    "spanish": "Tiếng Tây Ban Nha",
-    "korean": "Tiếng Hàn",
-    "hindi": "Tiếng Hindi",
-    "indonesian": "Tiếng Indonesia",
-    "onboarding_1": "Thiết kế các hoạt hình mượt mà từng khung hình với công cụ vẽ đơn giản.",
-    "onboarding_2": "Biến ý tưởng của bạn thành chuyển động bằng cách phác thảo các khung hình sinh động trên điện thoại.",
-    "onboarding_3": "Khám phá sự sáng tạo và mang tác phẩm của bạn đến với cuộc sống như chưa bao giờ có trước đây.",
-    "onboarding_4": "Lưu hoạt hình của bạn một cách liền mạch và bắt đầu tạo dựng thế giới sáng tạo ngay hôm nay!",
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "japanese": "Japanese",
+    "spanish": "Spanish",
+    "korean": "Korean",
+    "hindi": "Hindi",
+    "indonesian": "Indonesia",
+    "onboarding_1": "Chúng tôi giúp bạn hiểu rõ hơn về thói quen ăn uống của mình",
+    "onboarding_1_des": "Phân tích dinh dưỡng sâu sắc giúp bạn theo dõi chất lượng bữa ăn hàng ngày và xây dựng thói quen ăn uống bền vững.",
+    "onboarding_2": "Phân tích và hiển thị lượng dinh dưỡng trong bữa ăn của bạn",
+    "onboarding_2_des": "Nhận phân tích dinh dưỡng chi tiết cho mỗi bữa ăn, bao gồm lượng chính xác của các chất dinh dưỡng vĩ mô và vi mô.",
+    "onboarding_3": "Giữ kiểm soát khẩu phần và dinh dưỡng của bạn.",
+    "onboarding_3_des": "Dễ dàng theo dõi kích thước khẩu phần và kiểm soát lượng dinh dưỡng hàng ngày của bạn.",
     "continue": "Tiếp tục",
     "language": "Ngôn ngữ",
-    "no_internet": "Không có kết nối Internet",
+    "no_internet": "Không có Internet",
     "please_check_your_connection": "Vui lòng kiểm tra kết nối của bạn",
     "try_again": "Thử lại",
     "get_started": "Bắt đầu",
@@ -26,11 +27,10 @@
     "feedback": "Phản hồi",
     "share_app": "Chia sẻ ứng dụng",
     "share": "Chia sẻ",
-    "create_more": "Tạo thêm",
     "privacy_policy": "Chính sách bảo mật",
     "rate_app": "Đánh giá ứng dụng",
-    "rate_app_content": "Chúng tôi đang nỗ lực để mang lại trải nghiệm người dùng tốt hơn.",
-    "rate_app_subcontent": "Chúng tôi rất biết ơn nếu bạn có thể đánh giá chúng tôi.",
+    "rate_app_content": "Chúng tôi đang làm việc chăm chỉ để mang lại trải nghiệm người dùng tốt hơn.",
+    "rate_app_subcontent": "Chúng tôi sẽ rất biết ơn nếu bạn có thể đánh giá chúng tôi.",
     "rate_us": "Đánh giá chúng tôi",
     "exit_content": "Bạn có chắc chắn muốn thoát khỏi ứng dụng không?",
     "exit": "Thoát",
@@ -38,226 +38,69 @@
     "retry": "Thử lại",
     "check_your_connection": "Vui lòng kiểm tra kết nối của bạn",
     "show_all": "Hiển thị tất cả",
-    "pages": "Trang",
-    "project_name": "Tên dự án",
-    "frame_rate": "Tốc độ khung hình",
-    "background": "Nền",
-    "format": "Định dạng",
-    "ratio": "Tỷ lệ",
-    "select_background": "Chọn nền",
-    "play_animation": "Phát hoạt hình",
-    "pause_animation": "Tạm dừng hoạt hình",
-    "export": "Xuất",
-    "exit_title": "Bạn có muốn thoát không?",
-    "exit_subtitle": "Bạn đang tạo dự án",
-    "frames": "Khung hình",
-    "template": "Mẫu",
-    "project": "Dự án",
-    "vip_template_message": "Nâng cấp lên Premium để sử dụng không giới hạn các ứng dụng Draw Animation.",
-    "vip_template_title": "Mở khóa Template Premium miễn phí!",
-    "watch_video": "Xem quảng cáo",
-    "cat_walk": "Cat Walk",
-    "duck_run": "Duck Run",
-    "chicken_rooster": "Chicken Rooster",
-    "stickman_run": "Stickman Run",
-    "stickman_ninja": "Stickman Ninja",
-    "stickman_jump": "Stickman Jump",
-    "star": "Star",
-    "shark": "Shark",
-    "eating": "Eating",
-    "cute_dance": "Cute Dance",
-    "cool_chicken": "Cool Chicken",
-    "cute_kitten": "Cute Kitten",
-    "funny_man": "Funny Man",
-    "falling_ghost": "Falling Ghost",
-    "run": "Run",
-    "robot": "Robot",
-    "ship": "Ship",
-    "ufo": "UFO",
-    "rocket_fly": "Rocket Fly",
-    "spinning_bear": "Spinning Bear",
-    "cute_pig": "Cute Pig",
-    "stickman_with_sword": "Stickman With Sword",
-    "bonk": "Bonk",
-    "seal_witch": "Seal Witch",
-    "cute_ghost": "Cute Ghost",
-    "cat_pumpkin": "Cat Pumpkin",
-    "duck_love": "Duck Love",
-    "cool_smile": "Cool Smile",
-    "waving_boy": "Waving Boy",
-    "pinky_girl": "Pinky Girl",
-    "girl_with_glasses": "Girl With Glasses",
-    "angry_egg": "Angry Egg",
-    "bunny_cat": "Bunny Cat",
-    "cute_dog": "Cute Dog",
-    "computer_stick_man": "Computer Stick Man",
-    "dance_frog": "Dance Frog",
-    "deadpan_rabbit_look": "Deadpan Rabbit Look",
-    "egg_shining": "Egg Shining",
-    "fatty_bird": "Fatty Bird",
-    "funny_rabbit": "Funny Rabbit",
-    "ghost_popcorn": "Ghost Popcorn",
-    "giraffe_angry": "Giraffe Angry",
-    "giraffe_smart": "Giraffe Smart",
-    "i_dont_know": "I Don't Know",
-    "i_see_you": "I See You",
-    "lightsaber_stickman": "Lightsaber Stickman",
-    "like": "Like",
-    "love_explosion": "Love Explosion",
-    "oh_stick_man": "Oh Stick Man",
-    "super_bongo": "Super Bongo",
-    "spooked_ghost": "Spooked Ghost",
-    "thoughtful_boy": "Thoughtful Boy",
-    "blance": "Blance",
-    "bling": "Bling",
-    "bounce": "Bounce",
-    "bus": "Bus",
-    "car": "Car",
-    "cherry_bloom": "Cherry Bloom",
-    "coffee_ghost": "Coffee Ghost",
-    "dog_working": "Dog Working",
-    "drink": "Drink",
-    "duck_knife": "Duck Knife",
-    "easter": "Easter",
-    "exclamation": "Exclamation",
-    "fire": "Fire",
-    "fish": "Fish",
-    "flying_bird": "Flying Bird",
-    "football": "Football",
-    "heart_baloon": "Heart Baloon",
-    "hero_pixel": "Hero Pixel",
-    "hiccup_frog": "Hiccup Frog",
-    "laughing": "Laughing",
-    "lovely_eye": "Lovely Eye",
-    "panda_pull": "Panda Pull",
-    "peek_cat": "Peek Cat",
-    "question": "Question",
-    "sad": "Sad",
-    "smile": "Smile",
-    "smile_rabbit": "Smile Rabbit",
-    "squishy_cat": "Squishy Cat",
-    "thumb_up": "Thumb Up",
-    "eco_green_car": "Eco Green Car",
-    "face_emoji": "Face Emoji",
-    "fat_dragon": "Fat Dragon",
-    "flying_dog": "Flying Dog",
-    "heart": "Heart",
-    "jumping_cat": "Jumping Cat",
-    "loving_box": "Loving Box",
-    "moving_eye": "Moving Eye",
-    "playful_cat": "Playful Cat",
-    "surprise_ghost": "Surprise Ghost",
-    "walking_ghost": "Walking Ghost",
-    "bloom_flower": "Bloom Flower",
-    "dancing_chick": "Dancing Chick",
-    "dog_wag": "Dog Wag",
-    "dreamy_pup": "Dreamy Pup",
-    "fast_kick": "Fast Kick",
-    "fast_run": "Fast Run",
-    "forward_flip": "Forward Flip",
-    "galaxy_run": "Galaxy Run",
-    "happy_tiger": "Happy Tiger",
-    "hurdle_jump": "Hurdle Jump",
-    "magic_square": "Magic Square",
-    "motor_spin": "Motor Spin",
-    "pink_panther": "Pink Panther",
-    "road_trip": "Road Trip",
-    "rocket_flight": "Rocket Flight",
-    "starship": "Starship",
-    "turbo_bike": "Turbo Bike",
-    "van_drive": "Van Drive",
-    "volleyball_spin": "Volleyball Spin",
-    "wow": "Wow",
-    "empty": "Trống",
-    "empty_subtitle": "Bạn chưa có hoạt hình nào",
-    "create_your_own_project": "Tạo dự án của riêng bạn",
-    "you_can_see_all_template_here": "Bạn có thể xem tất cả các mẫu ở đây",
-    "project_create_here": "Dự án bạn tạo ở đây!",
-    "draw_something": "Vẽ một cái gì đó",
-    "if_the_feature": "Nếu tính năng không được mở khóa sau khi thanh toán, bạn có thể đến ",
-    "store_restore": "Cửa hàng > Khôi phục",
-    "or": "hoặc",
-    "click_the": "bấm vào nút Khôi phục bên dưới.",
-    "these_purchases": "Những giao dịch mua này",
-    "auto_renewable_subscriptions": "Đăng ký tự động gia hạn",
-    "subscription_is": "Đăng ký sẽ được gia hạn trừ khi bị hủy ít nhất 24 giờ trước khi hết thời gian sử dụng hiện tại.",
-    "cancel_subscription_at": "Bạn có thể hủy đăng ký bất cứ lúc nào",
-    "through_your": "Thông qua tài khoản Google Play của bạn:",
-    "google_play": "Trung tâm đăng ký Google Play",
-    "alert_1": "Thanh toán sẽ được tính vào tài khoản Google sau khi xác nhận. Đăng ký sẽ được gia hạn trừ khi bị hủy ít nhất 24 giờ trước khi hết thời gian hiện tại.",
-    "account_settings": "Cài đặt tài khoản",
-    "any_unused": "Bất kỳ phần chưa sử dụng của kỳ miễn phí, nếu có, sẽ bị mất khi người dùng mua đăng ký.",
-    "privacy": "Chính sách bảo mật",
-    "and": "Và",
-    "terms_of_service": "Điều khoản dịch vụ",
-    "restore": "Khôi phục",
-    "upgrade_preminum": "Nâng cấp Premium",
-    "auto_renew_monthly": "Gia hạn đăng ký tự động tính phí hàng tháng",
-    "monthly": "Hàng tháng",
-    "unlook_your_draw_animation_feature": "Mở khóa tính năng vẽ hoạt hình của bạn và nhận tất cả các tính năng Premium",
-    "lifetime_access": "Truy cập suốt đời",
-    "iap_feature_1": "Truy cập tất cả các tính năng chỉnh sửa",
-    "iap_feature_2": "Mở khóa tất cả icon dễ thương",
-    "iap_feature_3": "Nhận thêm coin để mở khóa các template",
-    "buy_now": "Mua ngay",
-    "buy_template_title": "Bạn sẽ sở hữu vật phẩm này mãi mãi. Nhấn mua ngay để trải nghiệm những điều tuyệt vời.",
-    "upgrade_to_use_this_feature": "Tính năng này yêu cầu nâng cấp tài khoản. Hãy mua gói Premium để mở khóa và tận hưởng trải nghiệm đầy đủ!",
-    "not_enough_coin": "Bạn không đủ xu",
-    "error_occurs": "Đã xảy ra lỗi. Vui lòng kiểm tra kết nối của bạn và thử lại sau.",
-    "can_not_restore": "Chúng tôi không thể khôi phục giao dịch mua của bạn. Vui lòng thử lại.",
-    "login_reward_title": "Chúc mừng! Bạn đã nhận được phần thưởng hôm nay. Hãy tiếp tục đăng nhập để nhận thêm!",
-    "claim": "Nhận",
-    "rate_app_get_coin": "Đánh giá ứng dụng 5⭐ để nhận ngay coin thưởng!",
-    "preview": "Xem trước",
-    "sketch": "Phác thảo",
-    "sketching": "Đang phác thảo",
-    "trace": "Vẽ theo",
-    "save": "Lưu",
-    "opacity": "Độ mờ",
-    "picture": "Hình ảnh",
-    "Flashlight": "Đèn pin",
-    "Flip": "Lật",
-    "excellent": "Tuyệt vời!",
-    "save_exit": "Lưu & Thoát",
-    "save_image_des": "Lưu bản phác thảo đã hoàn thành trong phần \"Hồ sơ\" để theo dõi tiến trình của bạn.",
-    "take_another_photo": "Chụp ảnh khác",
-    "add_image_store_success": "Bản phác thảo của bạn đã được thêm thành công.",
-    "update_image_store_success": "Bản phác thảo của bạn đã được cập nhật thành công.",
-    "sample": "Mẫu",
-    "your_sketch": "Bản phác thảo của bạn",
-    "transparent": "Không viền",
-    "with_background": "Nguyên bản",
-    "gallery": "Bộ sưu tập",
+    "select_language_before_start": "Chọn ngôn ngữ trước khi bắt đầu",
+    "scan_lable": "Quét nhãn",
+    "scan_food": "Quét thực phẩm",
+    "daily_intake": "Lượng tiêu thụ hàng ngày",
+    "to_get_started_scan_product": "Để bắt đầu, hãy quét mặt trước sản phẩm hoặc chọn từ thư viện!",
+    "scan_now": "Quét ngay",
+    "gallery": "Thư viện",
     "camera": "Máy ảnh",
-    "tutorial": "Hướng dẫn",
-    "tutorial_sketch_1": "1. Sau khi chọn hình ảnh yêu thích, màn hình vẽ theo sẽ hiển thị hình vẽ trên màn hình điện thoại của bạn.",
-    "tutorial_sketch_2": "2. Đặt một tờ giấy lên màn hình và bắt đầu vẽ theo.",
-    "tutorial_trace_1": "1. Sau khi chọn hình ảnh yêu thích, màn hình vẽ theo sẽ hiển thị hình vẽ trên màn hình điện thoại của bạn.",
-    "tutorial_trace_2": "2. Dùng giấy can để vẽ theo và tạo hình.",
-    "tutorial_trace_3": "3. Đặt giấy can lên màn hình điện thoại và bắt đầu vẽ theo hình ảnh.",
-    "video_tutorial": "Hướng dẫn video",
-    "save_image_success": "Lưu ảnh thành công!",
-    "save_image_fail": "Lưu ảnh thất bại!",
-    "stroke_width": "Độ rộng nét vẽ",
-    "mirror_symmetry": "Đối xứng gương",
-    "show_guidelines": "Hiển thị đường hướng dẫn",
-    "reset_brush_settings_to_default": "Đặt lại cài đặt cọ về mặc định",
-    "dash_length": "Độ dài nét đứt",
-    "gap_length": "Độ dài khoảng cách",
-    "glow_radius": "Bán kính phát sáng",
-    "density": "Mật độ",
-    "spread": "Độ lan",
-    "randomize_each_dot": "Ngẫu nhiên từng chấm",
-    "glow_intensity": "Cường độ phát sáng",
-    "blur_amount": "Mức độ làm mờ",
-    "outer_glow_size": "Kích thước phát sáng ngoài",
-    "inner_glow": "Phát sáng bên trong",
-    "rainbow_mode": "Chế độ cầu vồng",
-    "text": "Văn bản",
-    "font_size": "Cỡ chữ",
-    "word_spacing": "Khoảng cách giữa các từ",
-    "letter_spacing": "Khoảng cách giữa các chữ",
-    "random_rotation": "Xoay ngẫu nhiên",
-    "clear": "Xóa",
-    "clear_all": "Điều này sẽ xóa toàn bộ bản vẽ của bạn. Bạn có chắc chắn muốn tiếp tục?"
+    "now_capture_nutrition_label": "Bây giờ hãy chụp nhãn dinh dưỡng",
+    "capture_or_select_nutrion_lable": "Vui lòng chụp hoặc chọn nhãn thông tin dinh dưỡng của sản phẩm",
+    "result": "Kết quả",
+    "optimal_nutrients": "Nutritional tối ưu",
+    "watch_out": "Chú ý",
+    "recommendations": "Khuyến nghị",
+    "serving_size": "Kích thước khẩu phần",
+    "how_much_did_you_consume": "Bạn đã tiêu thụ bao nhiêu?",
+    "edit_serving_size": "Chỉnh sửa kích thước khẩu phần",
+    "enter_serving_size_in_grams": "Nhập kích thước khẩu phần bằng gram",
+    "serving_size_must_be_greater_than_0": "Kích thước khẩu phần phải lớn hơn 0",
+    "please_select_your_consumption": "Vui lòng chọn lượng tiêu thụ của bạn để tiếp tục",
+    "added_to_today_intake": "Đã thêm vào lượng tiêu thụ hôm nay!",
+    "snap_a_picture_of_your_meal_or_pick_one_from_your_gallery": "Chụp một bức ảnh về bữa ăn của bạn hoặc chọn một bức từ thư viện của bạn",
+    "take_photo": "Chụp ảnh",
+    "analysis_results": "Kết quả phân tích",
+    "total_nutrients": "Tổng số dinh dưỡng",
+    "no_food_items_analyzed_yet": "Chưa có thực phẩm nào được phân tích",
+    "daily_nutrition": "Dinh dưỡng hàng ngày",
+    "today_intake": "Lượng tiêu thụ hôm nay",
+    "food_items_history": "Lịch sử thực phẩm",
+    "this_section_show_all_food_item_you_have_comsume": "Phần này hiển thị tất cả các thực phẩm bạn đã tiêu thụ hôm nay, cùng với giá trị calo và thời gian của chúng.",
+    "got_it": "Hiểu rồi",
+    "detailed_nutrients": "Chi tiết dinh dưỡng",
+    "chat_with_AI": "Chat với AI",
+    "welcome_message": "👋 Xin chào! Tôi là trợ lý dinh dưỡng và sức khỏe của bạn. Hôm nay tôi có thể giúp gì cho bạn? 🍎",
+    "ask_AI": "Hỏi AI",
+    "what_would_you_like_to_know_about": "👋 Xin chào, bạn muốn biết về điều gì",
+    "suggestions_1": "🍽️ Bữa ăn này có cân bằng không?",
+    "suggestions_2": "🍊 Bữa ăn này có giàu vitamin không?",
+    "suggestions_3": "🏋️‍♂️ Bữa ăn này có tốt cho việc giảm cân không?",
+    "suggestions_4": "💪 Bữa ăn này hỗ trợ sự phát triển cơ bắp như thế nào?",
+    "suggestions_5": "🌟 Những lợi ích sức khỏe của bữa ăn này là gì?",
+    "no_results_found": "Không tìm thấy kết quả!",
+    "add_food_item": "Thêm món ăn",
+    "suggession_widget_1": "Thực phẩm này chứa những chất dinh dưỡng nào?",
+    "suggession_widget_2": "Thực phẩm này có tốt cho tôi không?",
+    "suggession_widget_3": "Trong phần này có bao nhiêu calo?",
+    "suggession_widget_4": "Lợi ích sức khỏe là gì?",
+    "suggession_widget_5": "Có dị ứng nào tôi nên biết không?",
+    "user_information": "Thông tin người dùng",
+    "your_name": "Tên của bạn",
+    "enter_your_name": "Nhập tên của bạn",
+    "gender": "Giới tính",
+    "male": "Nam",
+    "female": "Nữ",
+    "age": "Tuổi",
+    "height": "Chiều cao",
+    "weight": "Cân nặng",
+    "daily_target": "Mục tiêu hàng ngày",
+    "energy": "Năng lượng",
+    "calories": "Calo",
+    "protein": "Protein",
+    "carbohydrate": "Carbohydrate",
+    "carbohydrates": "Carbohydrate",
+    "fat": "Chất béo",
+    "fiber": "Chất xơ"
 }
